--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -10,7 +10,11 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Version History</h1>
-<p>v0.8.8</p>
+<p>v0.8.9</p>
+<ul>
+<li>First pass at dictionary entries for semantic category 9 = Physical Acts and Materials.</li>
+</ul>
+<p>v0.8.8 (August 12, 2023)</p>
 <ul>
 <li>Dictionary entries for semantic category 8 = Agriculture and Vegetation.</li>
 <li>Rewrote the “Getting Started With Elvish” document to reflect the current state of the lexicon.</li>
