--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-01.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-01.html
@@ -462,13 +462,13 @@
 <ul class="vocab-list">
 <li><b>alcarin</b> <i>adj.</i> “glorious”</li>
 <li><b>halla</b> <i>adj.</i> “tall”</li>
-<li><b>linta</b> <i>adj.</i> “swift”</li>
 <li><b>linquë</b> <i>adj.</i> “wet”</li>
+<li><b>linta</b> <i>adj.</i> “swift”</li>
 <li><b>luinë</b> <i>adj.</i> “blue”</li>
 <li><b>mai</b> <i>adv.</i> “well”</li>
+<li><b>melda</b> <i>adj.</i> “dear, beloved”</li>
 <li><b>oialë</b> <i>adv.</i> “forever”</li>
 <li><b>palan</b> <i>adj. and adv.</i> “far”</li>
-<li><b>melda</b> <i>adj.</i> “dear, beloved”</li>
 <li><b>qualin</b> <i>adj.</i> “dead”</li>
 <li><b>sí</b> <i>adv.</i> “now”</li>
 <li><b>turca</b> <i>adj.</i> “strong”</li>
@@ -1012,12 +1012,12 @@ Star (is shining) hour-to meeting-our-of
 <li><b>elen</b> <i>n.</i> “star”</li>
 <li><b>hesto</b> <i>n.</i> “captain”</li>
 <li><b>lúmë</b> <i>n.</i> “hour, period of time”</li>
-<li><b>omentië</b> <i>n.</i> “meeting”</li>
-<li><b>orco</b> <i>n.</i> “orc”</li>
 <li><b>macil</b> <i>n.</i> “sword”</li>
 <li><b>menel</b> <i>n.</i> “the sky, the heavens”</li>
 <li><b>mindon</b> <i>n.</i> “tower”</li>
 <li><b>nauco</b> <i>n.</i> “dwarf”</li>
+<li><b>omentië</b> <i>n.</i> “meeting”</li>
+<li><b>orco</b> <i>n.</i> “orc”</li>
 <li><b>osto</b> <i>n.</i> “city”</li>
 <li><b>rotto</b> <i>n.</i> “cave”</li>
 <li><b>taurë</b> <i>n.</i> “forest”</li>
@@ -1070,13 +1070,13 @@ Star (is shining) hour-to meeting-our-of
 <ul class="vocab-list">
 <li><b>alcarin</b> <i>adj.</i> “glorious”</li>
 <li><b>halla</b> <i>adj.</i> “tall”</li>
-<li><b>linta</b> <i>adj.</i> “swift”</li>
 <li><b>linquë</b> <i>adj.</i> “wet”</li>
+<li><b>linta</b> <i>adj.</i> “swift”</li>
 <li><b>luinë</b> <i>adj.</i> “blue”</li>
 <li><b>mai</b> <i>adv.</i> “well”</li>
+<li><b>melda</b> <i>adj.</i> “dear, beloved”</li>
 <li><b>oialë</b> <i>adv.</i> “forever”</li>
 <li><b>palan</b> <i>adj. and adv.</i> “far”</li>
-<li><b>melda</b> <i>adj.</i> “dear, beloved”</li>
 <li><b>qualin</b> <i>adj.</i> “dead”</li>
 <li><b>sí</b> <i>adv.</i> “now”</li>
 <li><b>turca</b> <i>adj.</i> “strong”</li>
@@ -1360,10 +1360,14 @@ Star (is shining) hour-to meeting-our-of
 <li><i>I orco turca ve anga.</i></li>
 <li><i>I atani menir et i ostollo.</i></li>
 <li><i>I nauco samë macil ango.</i></li>
-<li><i>Menel or i ambor.</i></li>
+<li><i>Menel or i ambor.</i> ¹</li>
 <li><i>Mátan mindoninyassë</i> or <i>Mátan mi mindoninya.</i></li>
 <li><i>Qualini eldar lorir oialë i ambossen.</i></li>
 </ol>
+
+<ul>
+<li>Note ¹: This phrase uses <i>menel</i> and not <i>i menel</i> because unlike English (“the sky”), Quenya does not use the definite article (<i>i</i> = “the”) for unique things..</li>
+</ul>
 
 <p>Tengwar answers:</p>
 
