--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-02.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-02.html
@@ -257,19 +257,19 @@
 <li><b>Ambar</b> <i>n.</i> “World”</li>
 <li><b>ambo</b> <i>n.</i> “hill”</li>
 <li><b>Endórë</b> <i>n.</i> “Middle-earth” ¹</li>
-<li><b>nan(do)</b> <i>n.</i> “valley”</li>
-<li><b>oron</b> (<b>oront-</b>) <i>n.</i> “mountain”</li>
 <li><b>mindon</b> <i>n.</i> “tower”</li>
+<li><b>nan(do)</b> <i>n.</i> “valley”</li>
 <li><b>noirë</b> <i>n.</i> “tomb”</li>
 <li><b>nór</b> <i>n.</i> “(dry) land” ²</li>
 <li><b>nórë</b> <i>n.</i> “country, land, nation” ²</li>
 <li><b>opelë</b> <i>n.</i> “village”</li>
+<li><b>oron</b> (<b>oront-</b>) <i>n.</i> “mountain”</li>
 <li><b>osto</b> <i>n.</i> “city”</li>
+<li><b>rotto</b> <i>n.</i> “cave, tunnel”</li>
 <li><b>sinomë</b> <i>adv.</i> “here”</li>
 <li><b>sírë</b> (<b>síri-</b>) <i>n.</i> “river”</li>
-<li><b>rotto</b> <i>n.</i> “cave, tunnel”</li>
-<li><b>taurë</b> <i>n.</i> “forest”</li>
 <li><b>tanomë</b> <i>adv.</i> “there”</li>
+<li><b>taurë</b> <i>n.</i> “forest”</li>
 </ul>
 
 <ul>
@@ -955,14 +955,14 @@
 <li><b>elda</b> <i>n.</i> “elf” ²</li>
 <li><b>hína</b> <i>n.</i> “child”<ul><li>irregular plural <b>híni</b> “children”</li></ul></li>
 <li><b>lië</b> <i>n.</i> “people”</li>
-<li><b>meldo</b> <i>n.</i> “[close] friend”</li>
 <li><b>meldë</b> <i>n.</i> “[close] friend (f.)”</li>
+<li><b>meldo</b> <i>n.</i> “[close] friend”</li>
 <li><b>nauco</b> <i>n.</i> “dwarf”</li>
 <li><b>nér</b> (<b>ner-</b>) <i>n.</i> “man [male]” ¹</li>
 <li><b>nettë</b> <i>n.</i> “girl”</li>
 <li><b>nís</b> (<b>niss-</b>) <i>n.</i> “woman”</li>
-<li><b>perian</b> (<b>periand-</b>) <i>n.</i> “halfling”</li>
 <li><b>orco</b> <i>n.</i> “orc”</li>
+<li><b>perian</b> (<b>periand-</b>) <i>n.</i> “halfling”</li>
 <li><b>quén</b> (<b>quen-</b>) <i>n.</i> “person” ²</li>
 <li><b>quen(dë)</b> <i>n.</i> “Elf (a technical term only)” ²</li>
 <li><b>seldo</b> <i>n.</i> “boy”</li>
@@ -980,8 +980,8 @@
 <li><b>fimbë</b> (<b>fimbi-</b>) <i>adj.</i> “thin”</li>
 <li><b>halla</b> <i>adj.</i> “tall”</li>
 <li><b>höa</b> <i>adj.</i> “big, large” ¹</li>
-<li><b>lauca</b> <i>adj.</i> “warm”</li>
 <li><b>lára</b> <i>adj.</i> “flat”</li>
+<li><b>lauca</b> <i>adj.</i> “warm”</li>
 <li>^<b>lenca</b> <i>adj.</i> “slow”</li>
 <li><b>linta</b> <i>adj.</i> “swift”</li>
 <li><b>mára</b> <i>adj.</i> “good, useful”</li>
@@ -995,8 +995,8 @@
 <li><b>téra</b> <i>adj.</i> “straight”</li>
 <li><b>tiuca</b> <i>adj.</i> “thick, fat”</li>
 <li><b>turca</b> <i>adj.</i> “strong (physically)” ¹</li>
-<li><b>tyelca</b> <i>adj.</i> “hasty”</li>
 <li>^<b>turwa</b> <i>adj.</i> “powerful, strong (abstractly)” ¹</li>
+<li><b>tyelca</b> <i>adj.</i> “hasty”</li>
 <li><b>urra</b> <i>adj.</i> “bad”</li>
 <li><b>yána</b> <i>adj.</i> “wide”</li>
 </ul>
@@ -1269,8 +1269,8 @@
 <li><b>cirya</b> <i>n.</i> “ship”</li>
 <li><b>ciryamo</b> <i>n.</i> “sailor”</li>
 <li><b>ëar</b> <i>n.</i> “sea”</li>
-<li><b>falma</b> <i>n.</i> “wave”</li>
 <li><b>falassë</b> <i>n.</i> “shore, surf”</li>
+<li><b>falma</b> <i>n.</i> “wave”</li>
 <li><b>hresta</b> <i>n.</i> “beach, shore”</li>
 <li><b>londë</b> <i>n.</i> “haven, harbour”</li>
 <li><b>luntë</b> <i>n.</i> “boat”</li>
@@ -1284,7 +1284,7 @@
 <p>Here are some vocabulary words having to do with the sky:</p>
 
 <ul class="vocab-list">
-<li><b>Anar</b> <i>n.</i> “Sun”</li>
+<li><b>Anar</b> (<b>Anár-</b>) <i>n.</i> “Sun”</li>
 <li><b>cal-</b> <i>v.</i> “to shine” ¹
 <ul><li><i>pa.t.</i> ^<b>callë</b> “shone”</li></ul></li>
 <li><b>elen</b> <i>n.</i> “star”</li>
@@ -1393,17 +1393,17 @@
 <li><b>mailë</b> <i>n.</i> “lust” ¹</li>
 <li><b>mel-</b> <i>v.</i> “to love (deeply)” ²
 <ul><li><i>pa.t.</i> ^<b>mélë</b> “loved (deeply)”</li></ul></li>
+<li><b>melda</b> <i>adj.</i> “dear, beloved”</li>
+<li><b>meldë</b> <i>n.</i> “[close] friend (f.)”</li>
+<li><b>meldo</b> <i>n.</i> “[close] friend (m.)”</li>
 <li><b>melindo</b> <i>n.</i> “lover (m.)”</li>
 <li><b>melissë</b> <i>n.</i> “lover (f.)”</li>
-<li><b>melda</b> <i>adj.</i> “dear, beloved”</li>
-<li><b>meldo</b> <i>n.</i> “[close] friend (m.)”</li>
-<li><b>meldë</b> <i>n.</i> “[close] friend (f.)”</li>
 <li><b>melmë</b> <i>n.</i> “love”</li>
 <li>!<b>nil-</b> <i>v.</i> “to love, have care for” ²
 <ul><li><i>pa.t.</i> !<b>nillë</b> “loved, cared for”</li></ul></li>
 <li><b>nilmë</b> <i>n.</i> “friendship”</li>
-<li><b>nildo</b> <i>n.</i> “[casual] friend (m.)”</li>
 <li><b>nildë</b> <i>n.</i> “[casual] friend (f.)”</li>
+<li><b>nildo</b> <i>n.</i> “[casual] friend (m.)”</li>
 <li><b>yermë</b> <i>n.</i> “sexual desire” ¹</li>
 </ul>
 
@@ -1552,7 +1552,7 @@ In this place will I abide, and my heirs, unto the ending of the world.
 
 <p>There was no unified Quenya grammar in this period, but Tolkien wrote several more specialized documents on Quenya nouns, verbs and the language’s phonological character. In this period Tolkien also revealed the existence of his tales to the rest of the world with the publication of <i>The Hobbit</i> in 1937. Shortly after, Tolkien started working on his most famous work, <i>The Lord of the Rings</i>, which he wrote between 1937 and 1949. His private work on <i>The Silmarillion</i> also advanced considerably in this period.</p>
 
-<p>In the 1930s and 40s, the Elvish languages became increasingly tied to Tolkien’s Legendarium. The “real world” elements of the languages mostly vanished (through Tolkien did later translate a few Catholic prayers into Elvish in the 1950s). Some of the more obvious resemblances between Primitive Elvish and Proto-Indo-European were removed. Carl Hostetter made a persuasive argument (at Omentielva Otsea in 2017) that <i>The Etymologies</i> itself may have been created primarily as a way of explaining names in <i>The Silmarillion</i> (and to a lesser extent <i>The Lord of the Rings</i>), rather than being a general-purpose linguistic work like the <i>Qenya Lexicon</i>.</p>
+<p>In the 1930s and 40s, the Elvish languages became increasingly tied to Tolkien’s Legendarium. The “real world” elements of the languages mostly vanished (though Tolkien did later translate a few Catholic prayers into Elvish in the 1950s). Some of the more obvious resemblances between Primitive Elvish and Proto-Indo-European were removed. Carl Hostetter made a persuasive argument (at Omentielva Otsea in 2017) that <i>The Etymologies</i> itself may have been created primarily as a way of explaining names in <i>The Silmarillion</i> (and to a lesser extent <i>The Lord of the Rings</i>), rather than being a general-purpose linguistic work like the <i>Qenya Lexicon</i>.</p>
 
 <p><a id="c2-7-3"></a><b>2.7.3 Late Quenya (1950s-1970s):</b> <i>The Lord of the Rings</i> was published as three separate books in 1954-5, at which point the world at large finally learned of Tolkien’s Elvish languages. This was followed by a second edition in 1965. In the 1950s and 60s Tolkien also went through a major rewrite of <i>The Silmarillion</i> in the hopes of publishing it after <i>The Lord of the Rings</i>, work that Tolkien himself was sadly unable to complete. <i>The Silmarillion</i> was edited and published in 1977 by his son Christopher Tolkien instead, four years after J.R.R. Tolkien’s death in 1973. The publication of <i>The Lord of the Rings</i> did not stop Tolkien’s work on the Elvish languages, and he continued to modify them throughout the 1950s, 60s, and 70s up until his death.</p>
 
@@ -1593,20 +1593,20 @@ In this place will I abide, and my heirs, unto the ending of the world.
 <li><b>ailin</b> <i>n.</i> “lake”</li>
 <li><b>Ambar</b> <i>n.</i> “World”</li>
 <li><b>ambo</b> <i>n.</i> “hill”</li>
-<li><b>Endórë</b> <i>n.</i> “Middle-earth”</li>
-<li><b>nan(do)</b> <i>n.</i> “valley”</li>
-<li><b>oron</b> (<b>oront-</b>) <i>n.</i> “mountain”</li>
+<li><b>Endórë</b> <i>n.</i> “Middle-earth” ¹</li>
 <li><b>mindon</b> <i>n.</i> “tower”</li>
+<li><b>nan(do)</b> <i>n.</i> “valley”</li>
 <li><b>noirë</b> <i>n.</i> “tomb”</li>
-<li><b>nór</b> <i>n.</i> “(dry) land” ¹</li>
-<li><b>nórë</b> <i>n.</i> “country, land, nation” ¹</li>
+<li><b>nór</b> <i>n.</i> “(dry) land” ²</li>
+<li><b>nórë</b> <i>n.</i> “country, land, nation” ²</li>
 <li><b>opelë</b> <i>n.</i> “village”</li>
+<li><b>oron</b> (<b>oront-</b>) <i>n.</i> “mountain”</li>
 <li><b>osto</b> <i>n.</i> “city”</li>
+<li><b>rotto</b> <i>n.</i> “cave, tunnel”</li>
 <li><b>sinomë</b> <i>adv.</i> “here”</li>
 <li><b>sírë</b> (<b>síri-</b>) <i>n.</i> “river”</li>
-<li><b>rotto</b> <i>n.</i> “cave, tunnel”</li>
-<li><b>taurë</b> <i>n.</i> “forest”</li>
 <li><b>tanomë</b> <i>adv.</i> “there”</li>
+<li><b>taurë</b> <i>n.</i> “forest”</li>
 </ul>
 
 <ul>
@@ -1665,14 +1665,14 @@ In this place will I abide, and my heirs, unto the ending of the world.
 <li><b>elda</b> <i>n.</i> “elf” ²</li>
 <li><b>hína</b> <i>n.</i> “child”<ul><li>irregular plural <b>híni</b> “children”</li></ul></li>
 <li><b>lië</b> <i>n.</i> “people”</li>
-<li><b>meldo</b> <i>n.</i> “[close] friend”</li>
 <li><b>meldë</b> <i>n.</i> “[close] friend (f.)”</li>
+<li><b>meldo</b> <i>n.</i> “[close] friend”</li>
 <li><b>nauco</b> <i>n.</i> “dwarf”</li>
 <li><b>nér</b> (<b>ner-</b>) <i>n.</i> “man [male]” ¹</li>
 <li><b>nettë</b> <i>n.</i> “girl”</li>
 <li><b>nís</b> (<b>niss-</b>) <i>n.</i> “woman”</li>
-<li><b>perian</b> (<b>periand-</b>) <i>n.</i> “halfling”</li>
 <li><b>orco</b> <i>n.</i> “orc”</li>
+<li><b>perian</b> (<b>periand-</b>) <i>n.</i> “halfling”</li>
 <li><b>quén</b> (<b>quen-</b>) <i>n.</i> “person” ²</li>
 <li><b>quen(dë)</b> <i>n.</i> “Elf (a technical term only)” ²</li>
 <li><b>seldo</b> <i>n.</i> “boy”</li>
@@ -1692,13 +1692,13 @@ In this place will I abide, and my heirs, unto the ending of the world.
 <li><b>fimbë</b> (<b>fimbi-</b>) <i>adj.</i> “thin”</li>
 <li><b>halla</b> <i>adj.</i> “tall”</li>
 <li><b>höa</b> <i>adj.</i> “big, large” ¹</li>
-<li><b>lauca</b> <i>adj.</i> “warm”</li>
 <li><b>lára</b> <i>adj.</i> “flat”</li>
+<li><b>lauca</b> <i>adj.</i> “warm”</li>
 <li>^<b>lenca</b> <i>adj.</i> “slow”</li>
 <li><b>linta</b> <i>adj.</i> “swift”</li>
 <li><b>mára</b> <i>adj.</i> “good, useful”</li>
 <li><b>náha</b> <i>adj.</i> “narrow”</li>
-<li><b>nitya</b> <i>adj.</i> “little, small”</li>
+<li><b>nitya</b> <i>adj.</i> “little”</li>
 <li><b>núra</b> <i>adj.</i> “deep”</li>
 <li><b>polda</b> <i>adj.</i> “big and strong, burly” ¹</li>
 <li>^<b>quilda</b> <i>adj.</i> “quiet”</li>
@@ -1707,8 +1707,8 @@ In this place will I abide, and my heirs, unto the ending of the world.
 <li><b>téra</b> <i>adj.</i> “straight”</li>
 <li><b>tiuca</b> <i>adj.</i> “thick, fat”</li>
 <li><b>turca</b> <i>adj.</i> “strong (physically)” ¹</li>
-<li><b>tyelca</b> <i>adj.</i> “hasty”</li>
 <li>^<b>turwa</b> <i>adj.</i> “powerful, strong (abstractly)” ¹</li>
+<li><b>tyelca</b> <i>adj.</i> “hasty”</li>
 <li><b>urra</b> <i>adj.</i> “bad”</li>
 <li><b>yána</b> <i>adj.</i> “wide”</li>
 </ul>
@@ -1723,8 +1723,8 @@ In this place will I abide, and my heirs, unto the ending of the world.
 <li><b>cirya</b> <i>n.</i> “ship”</li>
 <li><b>ciryamo</b> <i>n.</i> “sailor”</li>
 <li><b>ëar</b> <i>n.</i> “sea”</li>
-<li><b>falma</b> <i>n.</i> “wave”</li>
 <li><b>falassë</b> <i>n.</i> “shore, surf”</li>
+<li><b>falma</b> <i>n.</i> “wave”</li>
 <li><b>hresta</b> <i>n.</i> “beach, shore”</li>
 <li><b>londë</b> <i>n.</i> “haven, harbour”</li>
 <li><b>luntë</b> <i>n.</i> “boat”</li>
@@ -1738,7 +1738,7 @@ In this place will I abide, and my heirs, unto the ending of the world.
 <p><b><u>Sky:</u></b></p>
 
 <ul class="vocab-list">
-<li><b>Anar</b> <i>n.</i> “Sun”</li>
+<li><b>Anar</b> (<b>Anár-</b>) <i>n.</i> “Sun”</li>
 <li><b>cal-</b> <i>v.</i> “to shine” ¹
 <ul><li><i>pa.t.</i> ^<b>callë</b> “shone”</li></ul></li>
 <li><b>elen</b> <i>n.</i> “star”</li>
@@ -1767,17 +1767,17 @@ In this place will I abide, and my heirs, unto the ending of the world.
 <li><b>mailë</b> <i>n.</i> “lust” ¹</li>
 <li><b>mel-</b> <i>v.</i> “to love (deeply)” ²
 <ul><li><i>pa.t.</i> ^<b>mélë</b> “loved (deeply)”</li></ul></li>
+<li><b>melda</b> <i>adj.</i> “dear, beloved”</li>
+<li><b>meldë</b> <i>n.</i> “[close] friend (f.)”</li>
+<li><b>meldo</b> <i>n.</i> “[close] friend (m.)”</li>
 <li><b>melindo</b> <i>n.</i> “lover (m.)”</li>
 <li><b>melissë</b> <i>n.</i> “lover (f.)”</li>
-<li><b>melda</b> <i>adj.</i> “dear, beloved”</li>
-<li><b>meldo</b> <i>n.</i> “[close] friend (m.)”</li>
-<li><b>meldë</b> <i>n.</i> “[close] friend (f.)”</li>
 <li><b>melmë</b> <i>n.</i> “love”</li>
 <li>!<b>nil-</b> <i>v.</i> “to love, have care for” ²
 <ul><li><i>pa.t.</i> !<b>nillë</b> “loved, cared for”</li></ul></li>
 <li><b>nilmë</b> <i>n.</i> “friendship”</li>
-<li><b>nildo</b> <i>n.</i> “[casual] friend (m.)”</li>
 <li><b>nildë</b> <i>n.</i> “[casual] friend (f.)”</li>
+<li><b>nildo</b> <i>n.</i> “[casual] friend (m.)”</li>
 <li><b>yermë</b> <i>n.</i> “sexual desire” ¹</li>
 </ul>
 
@@ -1820,10 +1820,10 @@ In this place will I abide, and my heirs, unto the ending of the world.
 
 <ul class="vocab-list">
 <li><b>andanéya</b> <i>adv.</i> “long ago”</li>
-<li><b>celu-</b> <i>v.</i> “to flow (forth)”
-<ul><li><i>pa.t.</i> <b>celunë</b> “flowed (forth)”</li></ul></li>
 <li><b>caita-</b> <i>v.</i> “to lie (down)”
 <ul><li><i>pa.t.</i> <b>cainë</b> “lay (down)”</li></ul></li>
+<li><b>celu-</b> <i>v.</i> “to flow (forth)”
+<ul><li><i>pa.t.</i> <b>celunë</b> “flowed (forth)”</li></ul></li>
 <li><b>fara-</b> <i>v.</i> “to hunt”
 <ul><li><i>pa.t.</i> <b>faranë</b> “hunted”</li></ul></li>
 <li><b>metta</b> <i>n.</i> “ending, end”</li>
