--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-03.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-03.html
@@ -226,28 +226,28 @@
 <li>^<b>hyalin</b> <i>n.</i> “paper”</li>
 <li><b>lambë</b> <i>n.</i> “language”</li>
 <li><b>lúmequenta</b> <i>n.</i> “history”</li>
-<li><b>nyárë</b> <i>n.</i> “tale, account”</li>
 <li><b>nyar-</b> <i>v.</i> “to tell, recite”
 <ul><li><i>pa.t.</i> *<b>nyarnë</b> “told, recited”</li></ul></li>
+<li><b>nyárë</b> <i>n.</i> “tale, account”</li>
 <li><b>óma</b> <i>n.</i> “voice”</li>
 <li><b>parma</b> <i>n.</i> “book”</li>
 <li><b>quenta</b> <i>n.</i> “story”</li>
 <li><b>quet-</b> <i>v.</i> “to say, speak” ²
 <ul><li><i>pa.t.</i> <b>quentë</b> “said, spoke”</li></ul></li>
 <li><b>quetta</b> <i>n.</i> “word”</li>
+<li><b>sarmë</b> <i>n.</i> “writing”</li>
 <li><b>tec-</b> <i>v.</i> “to write”
 <ul><li><i>pa.t.</i> ^<b>tencë</b> “wrote”</li></ul></li>
 <li><b>tecil</b> <i>n.</i> “pen”</li>
 <li><b>tehta</b> <i>n.</i> “written mark, diacritic”</li>
 <li><b>tengwa</b> <i>n.</i> “letter (of the alphabet)”</li>
-<li><b>sarmë</b> <i>n.</i> “writing”</li>
 <li><b>yal-</b> <i>v.</i> “to summon, *call”
 <ul><li><i>pa.t.</i> *<b>yallë</b> “summoned, called”</li></ul></li>
 </ul>
 
 <ul>
 <li>Note ¹: The verb <i>anta-</i> can mean both “give (a thing to someone)” and “present (someone with a thing)”. For the first meaning it uses the dative case for the person being given the thing and for the second meaning it uses the instrumental case for the thing being presented to the person. See the next section.</li>
-<li>Note ²: The English verb “say” generally requires a direct object (the thing said), and the English verb “speak” generally prohibits a direct object. Quenya uses a single verb <i>quet-</i> for both these, which is translated “say” when it has a direct object and “speak” when it does not: <i>i atan quetë quetta</i>  “the man says a word” but <i>i atan quetë i eldan</i> “the man speaks to an elf” (<i>eldan</i> “to an elf” is the dative case; see next).</li>
+<li>Note ²: The English verb “say” generally requires a direct object (the thing said), and the English verb “speak” generally prohibits a direct object. Quenya uses a single verb <i>quet-</i> for both these, which is translated “say” when it has a direct object and “speak” when it does not: <i>i atan quetë quetta</i>  “the man says a word” but <i>i atan quetë eldan</i> “the man speaks to an elf” (<i>eldan</i> “to an elf” is the dative case; see next).</li>
 </ul>
 
 <p><a id="c3-1-3-1"></a><b>3.1.3.1 Dative and Instrumental Overview:</b> We need a few more noun cases to properly demonstrate the vocabulary above. The dative case is used for indirect objects which in English are generally represented with the preposition “to, for”:</p>
@@ -353,11 +353,11 @@
 <p>Translate the following to Quenya:</p>
 
 <ol class="exercise-list" start="21">
-<li><i>I am naming my son Miro.</i></li>
-<li><i>You wrote a book with paper.</i></li>
-<li><i>The woman reads books to the king.</i></li>
-<li><i>The girl spoke a word to her mother.</i></li>
-<li><i>The dwarf gave a pen to the boy.</i></li>
+<li>I am naming my son Miro.</li>
+<li>You wrote a book with paper.</li>
+<li>The woman reads books to the king.</li>
+<li>The girl spoke a word to her mother.</li>
+<li>The dwarf gave a pen to the boy.</li>
 </ol>
 
 <p>Answers are in <a href="#a3-1">Answer Key 3.1</a> at the end of this chapter.</p>
@@ -446,13 +446,14 @@
 <tr><td>2nd Person</td><td><i>-t(yë)</i> “you (familiar)” ¹</td><td><i>-ldë</i> “you (plural)”</td></tr>
 <tr><td></td><td><i>-l(yë)</i> “you (polite)” ¹</td><td></td></tr>
 <tr><td>3rd Person</td><td><i>-s(së)</i> “he/she” ¹</td><td><i>-ntë</i> “they” ²</td></tr>
-<tr><td></td><td><i>-s(sa)</i> “it (inanimate)” ¹</td><td><i>-nta</i> “they (inanimate)”</td></tr>
+<tr><td></td><td><i>-s(sa)</i> “it (inanimate)” ¹ ³</td><td><i>-nta</i> “they (inanimate)” ³</td></tr>
 </table>
 </center>
 
 <ul>
 <li>Note ¹: The singular pronouns have both short and long forms, as indicated by the parenthesis. Both <i>matin</i> and <i>matinyë</i> “I eat” are acceptable, but the short forms are more common. The main exception is 2nd sg. familiar, where long <i>-tyë</i> is more common, to avoid conflict with object suffixes (discussed in <a href="eldamo-intro-quenya-04.html#c4-3-2-2">Chapter 4, §4.3.2.2</a>) and dual suffixes (discussed in <a href="eldamo-intro-quenya-05.html#c5-2">Chapter 5, §5.2</a>).</li>
 <li>Note ²: Tolkien used another 3rd plural pronoun <i>-ltë</i> about as often he used <i>-ntë</i>, so much so that it is impossible to determine which Tolkien preferred. This course uses <i>-ntë</i> for “they”, but you will likely see <i>-ltë</i> in Quenya writing just as often. Its inanimate equivalent is (probably) <i>-lta</i>.</li>
+<li>Note ³: The inanimate subject suffixes appear only in one chart from the late 1950s or early 1960s (PE17/57), making them more questionable. Many people prefer to use the animate suffixes <i>-s(se)</i> and <i>-nte/-lte</i> for inanimates as well.</li>
 </ul>
 
 <p><a id="c3-2-2-1"></a><b>3.2.2.1 Stressed Pronouns as Subjects:</b> In the overwhelming majority of cases, the pronoun subject suffix is used when a pronoun is the subject of a sentence: <i>nauvan tanomë</i> “I will be there”. But on rare occasions, the independent pronoun form will be used instead, but in its stressed form with a long vowel: <i>ní nauva tanomë</i> “<u>I</u> will be there” (VT49/19). This construction emphasizes the pronoun, which is why the pronoun is stressed and its vowel is lengthened. This topic is discussed further in <a href="eldamo-intro-quenya-07.html#c7-1-1">Chapter 7, Section §7.1.1</a> along with other emphatic pronouns.</p>
@@ -557,7 +558,7 @@
 <li><i>Simpalya lirë nin.</i></li>
 <li><i>Lindalë yalë fëalvar.</i></li>
 <li><i>Túvelmë i orco ar tíralmes sí.</i></li>
-<li><i>Lírelvar lairi eldaron nár, ar nanta márë.</i></li>
+<li><i>Lírilvar lairi eldaron nár, ar nanta márë.</i></li>
 </ol>
 
 <p>Translate the following to Quenya:</p>
@@ -740,6 +741,8 @@
 
 <p><span class="advanced-topic">Speculative:</span> Indirect imperatives may include a subject pronoun, which is suffixed to the <i>á</i>: <i>áse tulë</i> “let him come” (note: the suffix is <i>-se</i> rather than the usual <i>-ssë</i> due to stress rules which will be discussed in <a href="eldamo-intro-quenya-06.html#c6-1-2-3">Chapter 6, Section §6.1.2.3</a>). It is possible (though rare) for the 2nd sg. pronoun <i>lye</i> to be used this way: <i>ályë tulë</i> “come (you)”. If the pronoun (or noun) in the indirect command is plural, then the verb is also plural: <i>áldë tulir</i> “come (you all)”, <i>ántë tulir</i> “let them come”, <i>á tulir i atani</i> “let the men come”. Where there is a subject noun for an indirect imperative (<i>i atani</i>), it follows rather than precedes the verb.</p>
 
+<p>These suffixed imperatives can retain their long vowel even when the pronominal suffixes involve a consonant cluster: see <a href="eldamo-intro-quenya-06.html#c6-1-2-3">Chapter 6, Section §6.1.2.3</a> for discussion. However, if the imperative is not emphasized and is “softer”, the vowel can shorten: <i>aldë, antë</i>. This is especially likely with the (optional) 2nd person suffix <i>-lyë</i>, which is included to make the imperative more polite: <i>alyë</i>. It is even possible to have a softer short <i>a</i> in unsuffixed imperatives, as in <i>a laita te</i> “praise them” (LotR/953). To make the imperatives more obvious, this course consistently uses long <i>á</i>.</p>
+
 <p>Just because <i>á</i> is used for commands doesn’t mean it is overbearing in tone, any more than it is overbearing to say “help me out” in English. However, various formations can be used to soften the tone of a command, especially the word <i>mecin</i> “please”, just like in English: <i>á tulë, mecin</i> “come, please” (PE22/166). Also like English, a question can be used in place of a command to further soften the request: <i>ma tuluvalyë enar, mecin</i> “will you come tomorrow, please?” (PE22/106).</p>
 
 <div class="advanced-topic">
@@ -761,7 +764,7 @@
 <p>The adverb <i>nai</i> was originally an imperative expression followed by the indeclinable relative pronoun <i>i</i> “that”: <i>ná i</i> “be [it] that”, but the expression has since combined into the indicator of wishes (RGEO/60). Compare the following imperative statements to the <i>nai</i> (wish) statement:</p>
 
 <ul>
-<li><i>á tulë, álë tulir</i> “come, come you all” (direct imperative).</li>
+<li><i>á tulë, áldë tulir</i> “come, come you all” (direct imperative).</li>
 <li><i>á tulir i atani</i> “let the men come” (indirect imperative).</li>
 <li><i>nai i atani tuluvar</i> “may the men come” (wish).</li>
 </ul>
@@ -779,10 +782,10 @@
 <p>Here are some vocabulary words mostly having to do with times of the day:</p>
 
 <ul class="vocab-list">
-<li><b>aurë</b> <i>n.</i> “day(time)” ¹</li>
 <li><b>ambarónë</b> <i>n.</i> “dawn”</li>
 <li><b>andúnë</b> <i>n.</i> “sunset; the West”</li>
 <li><b>arin</b> <i>n.</i> “morning”</li>
+<li><b>aurë</b> <i>n.</i> “day(time)” ¹</li>
 <li><b>cen-</b> <i>v.</i> “to see, look”
 <ul><li><i>pa.t.</i> <b>cennë</b> “saw, looked”</li></ul></li>
 <li><b>enar</b> <i>n.</i> “tomorrow”</li>
@@ -801,7 +804,6 @@
 
 <ul class="vocab-list">
 <li><b>amba</b> <i>adv.</i> “up(wards)”</li>
-<li><b>öa</b> <i>adv.</i> “away”</li>
 <li><b>formen</b> <i>n.</i> “north” ²</li>
 <li><b>forya</b> <i>adj.</i> “right (hand)” ²</li>
 <li><b>haira</b> <i>adj.</i> “far, remote”</li>
@@ -809,6 +811,7 @@
 <li><b>hyarmen</b> <i>n.</i> “south” ²</li>
 <li><b>hyarya</b> <i>adj.</i> “left (hand)” ²</li>
 <li><b>númen</b> <i>n.</i> “west” ²</li>
+<li><b>öa</b> <i>adv.</i> “away”</li>
 <li><b>orya-</b> <i>v.</i> “to rise”
 <ul><li><i>pa.t.</i> <b>oronyë</b> “rose”</li></ul></li>
 <li><b>rómen</b> <i>n.</i> “east” ²</li>
@@ -945,6 +948,8 @@ Maybe even thou shalt find it. Farewell!
 <p><b><u>Language:</u></b></p>
 
 <ul class="vocab-list">
+<li><b>anta-</b> <i>v.</i> “to give, present [with instrumental]” ¹
+<ul><li><i>pa.t.</i> <b>antanë</b> “gave”</li></ul></li>
 <li><b>essë</b> <i>n.</i> “name”</li>
 <li><b>esta-</b> <i>v.</i> “to name”
 <ul><li><i>pa.t.</i> *<b>estanë</b> “named”</li></ul></li>
@@ -953,27 +958,27 @@ Maybe even thou shalt find it. Farewell!
 <li>^<b>hyalin</b> <i>n.</i> “paper”</li>
 <li><b>lambë</b> <i>n.</i> “language”</li>
 <li><b>lúmequenta</b> <i>n.</i> “history”</li>
-<li><b>nyárë</b> <i>n.</i> “tale, account”</li>
 <li><b>nyar-</b> <i>v.</i> “to tell, recite”
 <ul><li><i>pa.t.</i> *<b>nyarnë</b> “told, recited”</li></ul></li>
+<li><b>nyárë</b> <i>n.</i> “tale, account”</li>
 <li><b>óma</b> <i>n.</i> “voice”</li>
 <li><b>parma</b> <i>n.</i> “book”</li>
 <li><b>quenta</b> <i>n.</i> “story”</li>
-<li><b>quet-</b> <i>v.</i> “to say, speak” ¹
+<li><b>quet-</b> <i>v.</i> “to say, speak” ²
 <ul><li><i>pa.t.</i> <b>quentë</b> “said, spoke”</li></ul></li>
 <li><b>quetta</b> <i>n.</i> “word”</li>
+<li><b>sarmë</b> <i>n.</i> “writing”</li>
 <li><b>tec-</b> <i>v.</i> “to write”
 <ul><li><i>pa.t.</i> ^<b>tencë</b> “wrote”</li></ul></li>
 <li><b>tecil</b> <i>n.</i> “pen”</li>
 <li><b>tehta</b> <i>n.</i> “written mark, diacritic”</li>
 <li><b>tengwa</b> <i>n.</i> “letter (of the alphabet)”</li>
-<li><b>sarmë</b> <i>n.</i> “writing”</li>
 <li><b>yal-</b> <i>v.</i> “to summon, *call”
 <ul><li><i>pa.t.</i> *<b>yallë</b> “summoned, called”</li></ul></li>
 </ul>
 
 <ul>
-<li>Note ¹: The English verb “say” generally requires a direct object (the thing said), and the English verb “speak” generally prohibits a direct object. Quenya uses a single verb <i>quet-</i> for both these, which is translated “say” when it has a direct object and “speak” when it does not: <i>i atan quetë quetta</i>  “the man says a word” but <i>i atan quetë i eldan</i> “the man speaks to an elf”.</li>
+<li>Note ¹: The English verb “say” generally requires a direct object (the thing said), and the English verb “speak” generally prohibits a direct object. Quenya uses a single verb <i>quet-</i> for both these, which is translated “say” when it has a direct object and “speak” when it does not: <i>i atan quetë quetta</i>  “the man says a word” but <i>i atan quetë eldan</i> “the man speaks to an elf”.</li>
 </ul>
 
 <p><b><u>Music:</u></b></p>
@@ -1023,10 +1028,10 @@ Maybe even thou shalt find it. Farewell!
 <p><b><u>Times of the Day:</u></b></p>
 
 <ul class="vocab-list">
-<li><b>aurë</b> <i>n.</i> “day(time)” ¹</li>
 <li><b>ambarónë</b> <i>n.</i> “dawn”</li>
 <li><b>andúnë</b> <i>n.</i> “sunset; the West”</li>
 <li><b>arin</b> <i>n.</i> “morning”</li>
+<li><b>aurë</b> <i>n.</i> “day(time)” ¹</li>
 <li><b>enar</b> <i>n.</i> “tomorrow”</li>
 <li><b>lómë</b> <i>n.</i> “night” ¹</li>
 <li><b>nöa</b> <i>n.</i> “yesterday”</li>
@@ -1043,7 +1048,6 @@ Maybe even thou shalt find it. Farewell!
 
 <ul class="vocab-list">
 <li><b>amba</b> <i>adv.</i> “up(wards)”</li>
-<li><b>öa</b> <i>adv.</i> “away”</li>
 <li><b>formen</b> <i>n.</i> “north” ¹</li>
 <li><b>forya</b> <i>adj.</i> “right (hand)” ¹</li>
 <li><b>haira</b> <i>adj.</i> “far, remote”</li>
@@ -1051,6 +1055,7 @@ Maybe even thou shalt find it. Farewell!
 <li><b>hyarmen</b> <i>n.</i> “south” ¹</li>
 <li><b>hyarya</b> <i>adj.</i> “left (hand)” ¹</li>
 <li><b>númen</b> <i>n.</i> “west” ¹</li>
+<li><b>öa</b> <i>adv.</i> “away”</li>
 <li><b>orya-</b> <i>v.</i> “to rise”
 <ul><li><i>pa.t.</i> <b>oronyë</b> “rose”</li></ul></li>
 <li><b>rómen</b> <i>n.</i> “east” ¹</li>
@@ -1144,12 +1149,12 @@ Maybe even thou shalt find it. Farewell!
 <tr><td><nobr><b>2nd sg. fam.</b></nobr> “you, your (familiar)”</td><td><i>tye</i></td><td><i>-t(yë)</i> ¹</td><td><i>-(i)tya</i></td></tr>
 <tr><td><nobr><b>2nd sg. pol.</b></nobr> “you, your (polite)”</td><td><i>lye</i></td><td><i>-l(yë)</i></td><td><i>-(e)lya</i></td></tr>
 <tr><td><nobr><b>3rd sg. anim.</b></nobr> “him/her, he/she, his/her”</td><td><i>se</i></td><td><i>-s(së)</i></td><td><i>-(r)ya</i> ²</td></tr>
-<tr><td><nobr><b>3rd sg. inan.</b></nobr> “it, its”</td><td><i>sa</i></td><td><i>-s(sa)</i></td><td>—</td></tr>
+<tr><td><nobr><b>3rd sg. inan.</b></nobr> “it, its”</td><td><i>sa</i></td><td><i>-s(sa)</i> ⁴</td><td>—</td></tr>
 <tr><td><nobr><b>1st pl. excl.</b></nobr> “us, we, our (but not you)”</td><td><i>me</i></td><td><i>-lmë</i></td><td><i>-(e)lma</i></td></tr>
 <tr><td><nobr><b>1st pl. incl.</b></nobr> “us, we, our (including you)”</td><td><i>ve</i></td><td><i>-lvë</i></td><td><i>-(e)lva</i></td></tr>
 <tr><td><nobr><b>2nd pl.</b></nobr> “you, your (plural)”</td><td><i>le</i></td><td><i>-ldë</i></td><td><i>-(e)lda</i></td></tr>
 <tr><td><nobr><b>3rd pl. anim.</b></nobr> “them, they, their”</td><td><i>te</i></td><td><i>-ntë</i> ³</td><td><i>-(i)nta</i></td></tr>
-<tr><td><nobr><b>3rd pl. inan.</b></nobr> “them, they (neuter)”</td><td><i>tai</i></td><td><i>-nta</i></td><td>—</td></tr>
+<tr><td><nobr><b>3rd pl. inan.</b></nobr> “them, they (neuter)”</td><td><i>tai</i></td><td><i>-nta</i> ⁴</td><td>—</td></tr>
 </table>
 </center>
 
@@ -1157,6 +1162,7 @@ Maybe even thou shalt find it. Farewell!
 <li>Note ¹: Singular subject pronouns have short and long forms, with the short form being more common unless object suffixes are added. The exception is <i>-t(yë)</i>, where the long form <i>-tyë</i> is much more common and short <i>-t</i> should generally be avoided.</li>
 <li>Note ²: The possessive suffixes require a joining vowel when added to a noun ending in a consonant. The exception is <i>-(r)ya</i>, which uses <i>-ya</i> after a consonant and <i>-rya</i> after a vowel.</li>
 <li>Note ³: Popular variants of the 3rd pl. pronoun suffixes are <i>-ltë, -(i)lta</i>; both <i>-ltë</i> and <i>-ntë</i> were used often enough by Tolkien that it is hard to say which he preferred. This course uses <i>-ntë</i> throughout for consistency.</li>
+<li>Note ⁴: The inanimate subject suffixes appear only in one chart from the late 1950s or early 1960s (PE17/57), making them more questionable. Many people prefer to use the animate suffixes <i>-s(se)</i> and <i>-nte/-lte</i> for inanimates as well.</li>
 </ul>
 
 <p><a id="c3-6-2-4"></a><b>3.6.2.4 Future, Commands and Wishes Summary:</b></p>
@@ -1203,7 +1209,7 @@ Maybe even thou shalt find it. Farewell!
 <li><i>Estëan yondonya Miro.</i></li>
 <li><i>Tencel parma hyalinwen.</i></li>
 <li><i>I nís henta parmar i aranen.</i> ²</li>
-<li><i>I nettë quente quetta amilleryan.</i></li>
+<li><i>I nettë quentë quetta amilleryan.</i></li>
 <li><i>I nauco antanë tecil i seldon.</i></li>
 </ol>
 
@@ -1217,7 +1223,7 @@ Maybe even thou shalt find it. Farewell!
 <li><span class="transcribe" data-lang="q" data-value="Estëan yondonya Miro">Estëan yondonya Miro</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Tencel parma hyalinwen">Tencel parma hyalinwen</span></li>
 <li><span class="transcribe" data-lang="q" data-value="I nís henta parmar i aranen">I nís henta parmar i aranen</span></li>
-<li><span class="transcribe" data-lang="q" data-value="I nettë quente quetta amilleryan">I nettë quente quetta amilleryan</span></li>
+<li><span class="transcribe" data-lang="q" data-value="I nettë quentë quetta amilleryan">I nettë quentë quetta amilleryan</span></li>
 <li><span class="transcribe" data-lang="q" data-value="I nauco antanë tecil i seldon">I nauco antanë tecil i seldon</span></li>
 </ol>
 
@@ -1229,7 +1235,7 @@ Maybe even thou shalt find it. Farewell!
 <li>Your (polite) flute sings to me.</li>
 <li>Music calls our spirits.</li>
 <li>We (but not you) found the orc and we (but not you) are watching him/her now.</li>
-<li>Our (including you) songs are poems of elves, and they are good.</li>
+<li>Our (including you) songs are poems of elves, and they (inanimate) are good.</li>
 </ol>
 
 <ol class="exercise-list" start="7">
