--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-04.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-04.html
@@ -689,7 +689,7 @@ Red tehta don’t work in safari
 <li><i>ranco</i> (<i>rancu-</i>) “arm” → <i>ranqui</i> [rankwi] “arms” (Ety/RAK).</li>
 </ul>
 
-<p>These nouns retain their ancient plural forms rather than forming plurals with <i>-r</i>, so <i>angwi</i> “snakes” not **<i>angor</i>. In fact, there are a few nouns without u-stems which should form plurals using <i>-r</i> that instead use <i>-wi</i>, such as <i>orco</i> “orc” which has a regular plural form <i>orcor</i> but also an alternate form <i>orqui</i> by analogy with words like <i>ranco</i> → <i>ranqui</i> (WJ/390). Note that these <i>wi</i>-plurals do not appear for nouns whose <u>singular</u> forms end in <i>u</i>: thus <i>Ainu</i> “angel” → <i>Ainur</i> “angels”, not **<i>Ainwi</i> (Ety/AYAN). It also doesn’t apply to <i>o</i>-nouns whose stem also ends in <i>o</i>: <i>axo</i> “bone” → <i>axor</i> “bones” (MC/222).</p>
+<p>These nouns retain their ancient plural forms rather than forming plurals with <i>-r</i>, so <i>angwi</i> “snakes” not **<i>angor</i>. In fact, there are a few nouns without u-stems which properly form plurals using <i>-r</i> that can instead use <i>-wi</i>, such as <i>orco</i> “orc” which has a regular plural form <i>orcor</i> but also an alternate form <i>orqui</i> by analogy with words like <i>ranco</i> → <i>ranqui</i> (WJ/390). Note that these <i>wi</i>-plurals do not appear for nouns whose <u>singular</u> forms end in <i>u</i>: thus <i>Ainu</i> “angel” → <i>Ainur</i> “angels”, not **<i>Ainwi</i> (Ety/AYAN). It also doesn’t apply to <i>o</i>-nouns whose stem also ends in <i>o</i>: <i>axo</i> “bone” → <i>axor</i> “bones” (MC/222).</p>
 
 <p><a id="c4-2-1-3"></a><b>4.2.1.3 Alternate <i>er</i>-plurals:</b> There are a few nouns ending in <i>e</i> whose plurals use <i>-er</i> instead of <i>-i</i>. Many of these nouns have singular forms ending in <i>-ie</i> or <i>-le</i>:</p>
 
@@ -796,11 +796,11 @@ Red tehta don’t work in safari
 <li><b>carnë</b> (<b>carni-</b>) <i>adj.</i> “red”</li>
 <li><b>culuina</b> <i>adj.</i> “orange, golden-red”</li>
 <li><b>fána</b> <i>adj.</i> “white” ³</li>
-<li><b>laurëa</b> <i>adj.</i> “golden (light or colour)” ⁴</li>
 <li><b>laica</b> <i>adj.</i> “green”</li>
+<li><b>laurëa</b> <i>adj.</i> “golden (light or colour)” ⁴</li>
 <li><b>luinë</b> (<b>luini-</b>) <i>adj.</i> “blue”</li>
 <li><b>malina</b> <i>adj.</i> “yellow”</li>
-<li><b>mísë</b> [<b>þ</b>] <i>adj.</i> “grey” ³</li>
+<li><b>mísë</b> (<b>mísi-</b>) [<b>þ</b>] <i>adj.</i> “grey” ³</li>
 <li><b>morna</b> <i>adj.</i> “black”</li>
 <li><b>néca</b> <i>adj.</i> “pale, dim”</li>
 <li><b>ninquë</b> (<b>ninqui-</b>) <i>adj.</i> “white; chill” ³</li>
@@ -957,9 +957,9 @@ Red tehta don’t work in safari
 <ul class="vocab-list">
 <li><b>apsa</b> <i>n.</i> “meat (cooked)”</li>
 <li><b>culuma</b> <i>n.</i> “orange [fruit]”</li>
+<li><b>lamba</b> <i>n.</i> “tongue (physical)” ¹</li>
 <li><b>lav-</b> <i>v.</i> “to lick”
 <ul><li><i>pa.t.</i> <b>lávë</b> “licked”</li></ul></li>
-<li><b>lamba</b> <i>n.</i> “tongue (physical)” ¹</li>
 <li><b>limpë</b> <i>n.</i> “wine”</li>
 <li><b>massa</b> <i>n.</i> “bread”</li>
 <li><b>masta-</b> <i>v.</i> “to bake”
@@ -970,9 +970,9 @@ Red tehta don’t work in safari
 <li><b>matta</b> <i>n.</i> “food”</li>
 <li>^<b>maxa-</b> <i>v.</i> “to cook”
 <ul><li><i>pa.t.</i> *<b>maxanë</b> “cooked”</li></ul></li>
+<li><b>miruvórë</b> <i>n.</i> “mead, nectar-drink” ²</li>
 <li><b>nac-</b> <i>v.</i> “to bite”
 <ul><li><i>pa.t.</i> ^<b>nancë</b> “bit”</li></ul></li>
-<li><b>miruvórë</b> <i>n.</i> “mead, nectar-drink” ²</li>
 <li><b>nehtë</b> <i>n.</i> “honey”</li>
 <li><b>nén</b> (<b>nen-</b>) <i>n.</i> “water”</li>
 <li>^<b>orva</b> <i>n.</i> “apple”</li>
@@ -1431,10 +1431,10 @@ Red tehta don’t work in safari
 <li><b>lossë</b> <i>n. and adj.</i> “snow; snow-white; (white) blossom” ³</li>
 <li><b>morë</b> (<b>mori-</b>) <i>adj.</i> “dark”</li>
 <li><b>mornië</b> <i>n.</i> “darkness”</li>
+<li><b>nárë</b> <i>n.</i> “fire”</li>
+<li><b>nén</b> (<b>nen-</b>) <i>n.</i> “water”</li>
 <li><b>niqu-</b> <i>v.</i> “to be cold, freeze” ⁴
 <ul><li><i>pa.t.</i> <b>nicunë</b> “was cold, froze”</li></ul></li>
-<li><b>nén</b> (<b>nen-</b>) <i>n.</i> “water”</li>
-<li><b>nárë</b> <i>n.</i> “fire”</li>
 <li><b>ringa</b> <i>adj.</i> “cold”</li>
 <li><b>ringë</b> (<b>ringi-</b>) <i>n.</i> “cold”</li>
 <li><b>sar</b> (<b>sarn-</b>) <i>n.</i> “(small) stone”</li>
@@ -1630,11 +1630,11 @@ like gulls wailing?
 <li><b>carnë</b> (<b>carni-</b>) <i>adj.</i> “red”</li>
 <li><b>culuina</b> <i>adj.</i> “orange, golden-red”</li>
 <li><b>fána</b> <i>adj.</i> “white” ¹</li>
-<li><b>laurëa</b> <i>adj.</i> “golden (light or colour)” ²</li>
 <li><b>laica</b> <i>adj.</i> “green”</li>
+<li><b>laurëa</b> <i>adj.</i> “golden (light or colour)” ²</li>
 <li><b>luinë</b> (<b>luini-</b>) <i>adj.</i> “blue”</li>
 <li><b>malina</b> <i>adj.</i> “yellow”</li>
-<li><b>mísë</b> [<b>þ</b>] <i>adj.</i> “grey” ¹</li>
+<li><b>mísë</b> (<b>mísi-</b>) [<b>þ</b>] <i>adj.</i> “grey” ¹</li>
 <li><b>morna</b> <i>adj.</i> “black”</li>
 <li><b>néca</b> <i>adj.</i> “pale, dim”</li>
 <li><b>ninquë</b> (<b>ninqui-</b>) <i>adj.</i> “white; chill” ¹</li>
@@ -1654,9 +1654,9 @@ like gulls wailing?
 <ul class="vocab-list">
 <li><b>apsa</b> <i>n.</i> “meat (cooked)”</li>
 <li><b>culuma</b> <i>n.</i> “orange [fruit]”</li>
+<li><b>lamba</b> <i>n.</i> “tongue (physical)” ¹</li>
 <li><b>lav-</b> <i>v.</i> “to lick”
 <ul><li><i>pa.t.</i> <b>lávë</b> “licked”</li></ul></li>
-<li><b>lamba</b> <i>n.</i> “tongue (physical)” ¹</li>
 <li><b>limpë</b> <i>n.</i> “wine”</li>
 <li><b>massa</b> <i>n.</i> “bread”</li>
 <li><b>masta-</b> <i>v.</i> “to bake”
@@ -1667,9 +1667,9 @@ like gulls wailing?
 <li><b>matta</b> <i>n.</i> “food”</li>
 <li>^<b>maxa-</b> <i>v.</i> “to cook”
 <ul><li><i>pa.t.</i> *<b>maxanë</b> “cooked”</li></ul></li>
+<li><b>miruvórë</b> <i>n.</i> “mead, nectar-drink” ²</li>
 <li><b>nac-</b> <i>v.</i> “to bite”
 <ul><li><i>pa.t.</i> ^<b>nancë</b> “bit”</li></ul></li>
-<li><b>miruvórë</b> <i>n.</i> “mead, nectar-drink” ²</li>
 <li><b>nehtë</b> <i>n.</i> “honey”</li>
 <li><b>nén</b> (<b>nen-</b>) <i>n.</i> “water”</li>
 <li>^<b>orva</b> <i>n.</i> “apple”</li>
@@ -1748,10 +1748,10 @@ like gulls wailing?
 <li><b>lossë</b> <i>n. and adj.</i> “snow; snow-white; (white) blossom” ³</li>
 <li><b>morë</b> (<b>mori-</b>) <i>adj.</i> “dark”</li>
 <li><b>mornië</b> <i>n.</i> “darkness”</li>
+<li><b>nárë</b> <i>n.</i> “fire”</li>
+<li><b>nén</b> (<b>nen-</b>) <i>n.</i> “water”</li>
 <li><b>niqu-</b> <i>v.</i> “to be cold, freeze” ⁴
 <ul><li><i>pa.t.</i> <b>nicunë</b> “was cold, froze”</li></ul></li>
-<li><b>nén</b> (<b>nen-</b>) <i>n.</i> “water”</li>
-<li><b>nárë</b> <i>n.</i> “fire”</li>
 <li><b>ringa</b> <i>adj.</i> “cold”</li>
 <li><b>ringë</b> (<b>ringi-</b>) <i>n.</i> “cold”</li>
 <li><b>sar</b> (<b>sarn-</b>) <i>n.</i> “(small) stone”</li>
