--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-05.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-05.html
@@ -165,7 +165,7 @@
 - <span class="tengwar">`C<span style="color:red">2</span>^</span> “gate”</li>
 <li>6. <span class="tengwar">w</span>: <i>u<span style="color:red">mb</span>ar</i>
 - <span class="tengwar">`M<span style="color:red">w</span>#6</span> “fate”</li>
-<li>7. <span class="tengwar">1</span>: <i>a<span style="color:red">ng</span>a</i>
+<li>7. <span class="tengwar">s</span>: <i>a<span style="color:red">ng</span>a</i>
 - <span class="tengwar">`C<span style="color:red">s</span>#</span> “iron”</li>
 <li>8. <span class="tengwar">x</span>: <i>u<span style="color:red">ngw</span>ë</i>
 - <span class="tengwar">`M<span style="color:red">x</span>$</span> “spider’s web”</li>
@@ -318,7 +318,7 @@
 
 <ul>
 <li>Note ¹: The form <i>tyelpë</i> is archaic, the classical Quenya word for “silver”. In modern Quenya, this word has been modified to <i>telpë</i> borrowing from Telerin (LR/367; PM/356). The more archaic form is still used as the name for the <i>tyelpetéma</i> series, however (LotR/1120).</li>
-<li>Note ²: The 1940s word <i>arya</i> doesn’t seem to be compatible with Tolkien’s later “daytime” words like <i>aurë</i>, so while we are using it here as an example of 1940s tengwar names, it won’t appear again in this course. The other 1940s names, though, are largely compatible with Tolkien’s later writing.</li>
+<li>Note ²: The 1940s word <i>arya</i> “day (12 hours)” doesn’t seem to be compatible with Tolkien’s later “daytime” words like <i>aurë</i>, and in Tolkien’s later writings <i>arya</i> meant “excelling, better”; see <a href="#c5-5-5">section 5.5.5 below</a>. The other 1940s names, though, are largely compatible with Tolkien’s later writing.</li>
 </ul>
 
 <p>Tolkien didn’t give names for <span class="transcribe" data-lang="q" data-value="y">y</span> and <span class="transcribe" data-lang="q" data-value="hy">hy</span>. Personally I’d call them <i>anna unutixëa</i> “<i>anna</i> underdotted” and <i>hyarmen unutixëa</i> “<i>hyarmen</i> underdotted”. Some examples of their use:</p>
@@ -380,7 +380,7 @@
 <li>A single dot <span class="transcribe" data-lang="q" data-value=",">,</span> indicates a short pause in a sentence, roughly the equivalent of a comma “,” - <i>ná, mecin</i> (yes, please) = <span class="transcribe" data-lang="q" data-value="ná, mecin">ná, mecin</span></li>
 <li>A colon-like double dot <span class="transcribe" data-lang="q" data-value=".">.</span> indicates a longer pause at the end of a sentence, roughly the equivalent of a period “.” - <i>hantan lyen.</i> (I thank you) = <span class="transcribe" data-lang="q" data-value="hantan lyen.">hantan lyen.</span></li>
 <li>A triple or quadruple dot <span class="tengwar">-=</span> or <span class="tengwar">--</span> indicates an even longer pause, at the end of a paragraph or an entire document.</li>
-<li>The sign <span class="transcribe" data-lang="q" data-value="?">?</span> is a question mark “?” and <span class="transcribe" data-lang="q" data-value="!">!</span> an exclamation point “!”: <i>ma nályë márië?</i> (are you well?) = <span class="transcribe" data-lang="q" data-value="ma nályë márië?">ma nályë márië?</span> and <i>ná!</i> (yes!) = <span class="transcribe" data-lang="q" data-value="ná!">ná!</span></li>
+<li>The sign <span class="transcribe" data-lang="q" data-value="?">?</span> is a question mark “?” and <span class="transcribe" data-lang="q" data-value="!">!</span> an exclamation point “!”: <i>ma nalyë márië?</i> (are you well?) = <span class="transcribe" data-lang="q" data-value="ma nályë márië?">ma nályë márië?</span> and <i>ná!</i> (yes!) = <span class="transcribe" data-lang="q" data-value="ná!">ná!</span></li>
 <li>The signs <span class="transcribe" data-lang="q" data-value="“ ”">“ ”</span> are used for quotation marks: <i>“ná” quentes</i> (“yes” he said) = <span class="transcribe" data-lang="q" data-value="“ná” quentes">“ná” quentes</span></li>
 </ul>
 
@@ -392,14 +392,14 @@
 
 <h2><a id="c5-1-4"></a>5.1.4 Vocabulary: Tengwar Names II</h2>
 
-<p>Here are more tengwar names, including the 1940s-names for the <i>tyelpetéma</i> series (excluding the probably abandoned <i>arya</i>):</p>
+<p>Here are more tengwar names, including the 1940s-names for the <i>tyelpetéma</i> series:</p>
 
 <ul class="vocab-list">
 <li>5. <span class="tengwar">2</span>: <i>a<span style="color:red">nd</span>o</i>
 - <span class="tengwar">`C<span style="color:red">2</span>^</span> “gate”</li>
 <li>6. <span class="tengwar">w</span>: <i>u<span style="color:red">mb</span>ar</i>
 - <span class="tengwar">`M<span style="color:red">w</span>#6</span> “fate”</li>
-<li>7. <span class="tengwar">1</span>: <i>a<span style="color:red">ng</span>a</i>
+<li>7. <span class="tengwar">s</span>: <i>a<span style="color:red">ng</span>a</i>
 - <span class="tengwar">`C<span style="color:red">s</span>#</span> “iron”</li>
 <li>8. <span class="tengwar">x</span>: <i>u<span style="color:red">ngw</span>ë</i>
 - <span class="tengwar">`M<span style="color:red">x</span>$</span> “spider’s web”</li>
@@ -429,8 +429,14 @@
 - <span class="tengwar">`B<span style="color:red">4Ì</span>#</span> “guess, notion”</li>
 <li><span class="tengwar">5Ì</span>: <i><span style="color:red">ny</span>ellë</i>
 - <span class="tengwar"><span style="color:red">5Ì</span>$j¸R</span> “bell”</li>
+<li><span class="tengwar">7Ï</span>: <i>a<span style="color:red">ry</span>a</i>
+- <span class="tengwar">`C<span style="color:red">7Ï</span>E</span> “excelling, better” ¹</li>
 <li><span class="tengwar">j´</span>: <i>a<span style="color:red">ly</span>a</i>
 - <span class="tengwar">`C<span style="color:red">j´</span>E</span> “rich, prosperous”</li>
+</ul>
+
+<ul>
+<li>Note ¹: The translation of <i>arya</i> has been updated from its 1940s meaning to its later meaning.</li>
 </ul>
 
 <h2><a id="c5-1-5"></a>5.1.5 Tengwar Summary</h2>
@@ -682,7 +688,7 @@ associated, as head and foot, top and bottom, up and down, young and old, men an
 </table>
 </center>
 
-<p>Like plurals, duals mark the difference between exclusive <i>met/-mmë</i> “us/we two (but not you)” vs. inclusive <i>vet/-nquë</i> “both of us/we two”. For independent pronouns, duals mark the distinction between familiar <i>tyet</i> “you two (affectionate)” vs. polite <i>lyet</i> “you two (polite)”. This distinction is not made for the 2nd person dual subject suffix <i>-stë</i>, though the pronoun is usually interpreted as familiar (VT49/51). As usual, the possessive forms are the same as the subject forms with <i>e</i> changed to <i>a</i>, using a joining vowel <i>(e)</i> or <i>(i)</i> after consonantal nouns as with other possessive suffixes: <i>mindoninqua</i> “both of our tower”. Conceivably there is a 3rd. du. inanimate subject form <i>-tta</i>, but it is sufficiently obscure that if it is exists then it is probably barely used. The independent 3rd dual pronoun <i>tu</i> is both animate and inanimate (VT49/51).</p>
+<p>Like plurals, duals mark the difference between exclusive <i>met/-mmë</i> “us/we two (but not you)” vs. inclusive <i>vet/-nquë</i> “both of us/we two”. For independent pronouns, duals mark the distinction between familiar <i>tyet</i> “you two (affectionate)” vs. polite <i>let</i> “you two (polite)”. This distinction is not made for the 2nd person dual subject suffix <i>-stë</i>, though the pronoun is usually interpreted as familiar (VT49/51). As usual, the possessive forms are the same as the subject forms with <i>e</i> changed to <i>a</i>, using a joining vowel <i>(e)</i> or <i>(i)</i> after consonantal nouns as with other possessive suffixes: <i>mindoninqua</i> “both of our tower”. Conceivably there is a 3rd. du. inanimate subject form <i>-tta</i>, but it is sufficiently obscure that if it is exists then it is probably barely used. The independent 3rd dual pronoun <i>tu</i> is both animate and inanimate (VT49/51).</p>
 
 <p><span class="advanced-topic">Speculative:</span> Note that when the <u>possessed</u> item is dual rather than the possessor, it is likely that the possessive suffix is added first before the dual, as usual. The net result would be that possessed nouns are declined like vocalic nouns and use the <i>t</i>-dual: <i>hendinyat</i> (<i>hend-inya-t</i>) “my (pair of) eyes” not **<i>hendunya</i>.</p>
 
@@ -806,7 +812,7 @@ associated, as head and foot, top and bottom, up and down, young and old, men an
 <p>Translate the following to Quenya:</p>
 
 <ol class="exercise-list" start="7">
-<li>Do your ears listen to the king’s words?</li>
+<li>Do your ears hear the king’s words?</li>
 <li>The pair of birds sang in the tree.</li>
 <li>His tongue tasted a bitter vegetable.</li>
 <li>Birds fly above both land and sea.</li>
@@ -871,7 +877,7 @@ associated, as head and foot, top and bottom, up and down, young and old, men an
 
 <p><a id="c5-3-1-3"></a><b>5.3.1.3 Datives without Direct Objects:</b> Not every verb has a direct object, but it is possible that such a verb still has an indirect object. For example, the verb <i>orya-</i> “to rise” is an intransitive verb and cannot have an object: you can only rise yourself, not something else. You can still have an indirect object with such a verb, however: <i>lírëan i aran<u>en</u></i> “I am singing <u>for</u> the king”. The king is not the target of the action (the thing being sung), but is still associated with it. The presence or absense of a direct object can even change the English translation of the verb: <i>quetin yeldenyan</i> “I speak to my daughter” versus <i>quetin quetta yeldenyan</i> “I say a word to my daughter”.</p>
 
-<p>The use of the dative without an object also appears in some idiomatic Quenya expressions. The phrase <i>nás mara</i> means “it is good”, but <i>nás mára nin</i> [“(lit.) it is good to me”] is an expression meaning “I like it”: <i>tauri márë eldain (nár)</i> “forests are good to elves” = “elves like forests”. Finally, the dative is sometimes required by certain prepositions, such as <i>rá</i> “on behalf of”: <i>i elda quentë i aranen rá nin</i> “the elf spoke to the king on behalf of me [on my behalf]”.</p>
+<p>The use of the dative without an object also appears in some idiomatic Quenya expressions. The phrase <i>nás mára</i> means “it is good”, but <i>nás mára nin</i> [“(lit.) it is good to me”] is an expression meaning “I like it”: <i>tauri márë eldain (nár)</i> “forests are good to elves” = “elves like forests”. Finally, the dative is sometimes required by certain prepositions, such as <i>rá</i> “on behalf of”: <i>i elda quentë i aranen rá nin</i> “the elf spoke to the king on behalf of me [on my behalf]”.</p>
 
 <p><a id="c5-3-1-4"></a><b>5.3.1.4 The Long Dative:</b> The usual dative suffix is <i>-n</i>, but there is an alternate long dative suffix <i>-na</i> that is sometimes used, especially with pronouns: <i>antanen macil <u>sena</u></i> “I gave a sword to him/her”, as opposed to the more usual <i>sen</i>. The long dative might be considered more emphatic, or could be employed in poetry to add an additional syllable.</p>
 
@@ -1347,6 +1353,7 @@ associated, as head and foot, top and bottom, up and down, young and old, men an
 
 <ul class="vocab-list">
 <li><b>alcar</b> <i>n.</i> “glory”</li>
+<li><b>arya</b> <i>adj.</i> “excelling, *better” ¹</li>
 <li><b>laita-</b> <i>v.</i> “to praise”
 <ul><li><i>pa.t.</i> *<b>laitanë</b> “praised”</li></ul></li>
 <li><b>loima</b> <i>n.</i> “mistake”</li>
@@ -1364,6 +1371,10 @@ associated, as head and foot, top and bottom, up and down, young and old, men an
 <ul><li><i>pa.t.</i> *<b>verenyë</b> “dared”</li></ul></li>
 <li><b>verya</b> <i>adj.</i> “brave, bold”</li>
 <li><b>voronda</b> <i>adj.</i> “faithful, loyal”</li>
+</ul>
+
+<ul>
+<li>Note ¹: The adjective <i>arya</i> “excelling” is a more intense form of <i>mára</i> “good”. In comparisons it also means “better”: see <a href="eldamo-intro-quenya-09.html#c9-4">Chapter 9, Section §9.4</a> for details.</li>
 </ul>
 
 <h2><a id="c5-5-6"></a>5.5.6 Section Summary</h2>
@@ -1718,6 +1729,7 @@ to whom the air gives kisses.
 
 <ul class="vocab-list">
 <li><b>alcar</b> <i>n.</i> “glory”</li>
+<li><b>arya</b> <i>adj.</i> “excelling, *better” ¹</li>
 <li><b>laita-</b> <i>v.</i> “to praise”
 <ul><li><i>pa.t.</i> *<b>laitanë</b> “praised”</li></ul></li>
 <li><b>loima</b> <i>n.</i> “mistake”</li>
@@ -1735,6 +1747,10 @@ to whom the air gives kisses.
 <ul><li><i>pa.t.</i> *<b>verenyë</b> “dared”</li></ul></li>
 <li><b>verya</b> <i>adj.</i> “brave, bold”</li>
 <li><b>voronda</b> <i>adj.</i> “faithful, loyal”</li>
+</ul>
+
+<ul>
+<li>Note ¹: The adjective <i>arya</i> “excelling” is a more intense form of <i>mára</i> “good”. In comparisons it also means “better”: see <a href="eldamo-intro-quenya-09.html#c9-4">Chapter 9, Section §9.4</a> for details.</li>
 </ul>
 
 <p><b><u>Miscellaneous:</u></b></p>
@@ -2027,7 +2043,7 @@ to whom the air gives kisses.
 </ol>
 
 <ol class="exercise-list" start="7">
-<li><i>Ma hlarelyat lastat i arano quettain?</i></li>
+<li><i>Ma hlarelyat hlaret i arano quettar?</i></li>
 <li><i>I aiwet lirnet i aldassë.</i></li>
 <li><i>Lambarya tyávë sára quëa.</i></li>
 <li><i>Aiwi vilir or nór yo ëar.</i></li>
