--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-07.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-07.html
@@ -839,7 +839,6 @@
 <ul>
 <li>Note ¹: This adjective is literally “double right handed”. It is adapted from Mannish speech, since the Elves do not need such a word to describe themselves.</li>
 <li>Note ²: The word <i>cé</i> is used to mean “if” only in this section. Elsewhere I recommend <i>qui</i> “if” instead. See <a href="eldamo-intro-quenya-11.html#c11-2-1">Chapter 11, Section §11.2.1</a> for further discussion.</li>
-<li>Note ³: Earlier in this course we gave <i>anta</i> as the usual Quenya word for “face”; <i>cendelë</i> can be considered a synonym, perhaps analogous to “visage” since its derivation clearly has something to do with seeing (<i>cen-</i> = “to see”).</li>
 </ul>
 
 <p>For analysis, we break the text up into five phrases:</p>
@@ -1251,7 +1250,7 @@ and if northwards, it pointed towards Aman [the Blessed Land].
 
 <ol class="exercise-list tengwar-block" start="7">
 <li><span class="transcribe" data-lang="q" data-value="I quessi aiwion nár márë pilin carien">I quessi aiwion nár márë pilin carien</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Mundo rassë ui anda">Mundo rassë ui anda</span></li>
+<li><span class="transcribe" data-lang="q" data-value="I mundo rassë ui anda">I mundo rassë ui anda</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Polin norta rocco ilya aurë">Polin norta rocco ilya aurë</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Aiwëo ráma samë quesseli">Aiwëo ráma samë quesseli</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Hirnen quingarya nu i alda">Hirnen quingarya nu i alda</span></li>
