--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-08.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-08.html
@@ -183,7 +183,7 @@
 
 <p>Because the derivative verbs are not based on verbal roots, they needed to “borrow” their conjugations from other verb classes. In Tolkien’s later writing, the derivative verb for which we have the most information is <i>henta-</i> (PE17/77), and its conjugations mostly agree with the simplified rules presented above for a-stem verbs.</p>
 
-<p>One possible exception is the perfect tense. Some attested perfects of derivative verbs all have a “weak perfect” based on their (weak) past tense, such as <i>hentanë</i> → <i>ehentanië</i> (PE17/77). Others have a simple perfect like <i>tengwanë</i> → <i>etengwië</i> (VT49/48). This variation between simple and weak perfect may reflect a similar variation within the other major class of weak verbs: the causatives (see above).</p>
+<p>One possible exception is the perfect tense. Some attested perfects of derivative verbs have a “weak perfect” based on their (weak) past tense, such as <i>hentanë</i> → <i>ehentanië</i> (PE17/77). Others have a simple perfect like <i>tengwanë</i> → <i>etengwië</i> (VT49/48). This variation between simple and weak perfect may reflect a similar variation within the other major class of weak verbs: the causatives (see above).</p>
 
 <p><b>Summary:</b></p>
 
@@ -405,7 +405,7 @@
 <ul class="vocab-list">
 <li><b>car-</b> <i>v.</i> “to do, make”
 <ul><li><i>pa.t.</i> <b>carnë</b> “did, made”</li></ul></li>
-<li><b>carë</b> <i>n.</i> “action, deed”</li>
+<li><b>carda</b> <i>n.</i> “deed, *action”</li>
 <li><b>cúna-</b> <i>v.</i> “to bend” ¹
 <ul><li><i>pa.t.</i> *<b>cúnanë</b> “bent”</li></ul></li>
 <li><b>mólë</b> <i>n.</i> “labour, work”</li>
@@ -415,9 +415,10 @@
 <ul><li><i>pa.t.</i> <b>nicunë</b> “was cold, froze”</li></ul></li>
 <li><b>nut-</b> <i>v.</i> “to tie”
 <ul><li><i>pa.t.</i> *<b>nuntë</b> “tied”</li></ul></li>
+<li><b>pella</b> <i>prep.</i> “beyond” ²</li>
 <li><b>rac-</b> <i>v.</i> “to break”
 <ul><li><i>pa.t.</i> *<b>rancë</b> “broke”</li></ul></li>
-<li><b>sulpa-</b> <i>v.</i> “to lap up” ²
+<li><b>sulpa-</b> <i>v.</i> “to lap up” ³
 <ul><li><i>pa.t.</i> <b>sulpanë</b> “lapped up”</li></ul></li>
 <li><b>tamba-</b> <i>v.</i> “to knock”
 <ul><li><i>pa.t.</i> *<b>tambanë</b> “knocked”</li></ul></li>
@@ -432,7 +433,8 @@
 
 <ul>
 <li>Note ¹: These two verbs superficially resemble a-verbs, but are actually derivative verbs since they have long vowels in the verb stem.</li>
-<li>Note ²: Though originally a talat-stem verb, it had become a weak verb. This matters only for its (weak) past: <i>sulpanë</i>.</li>
+<li>Note ²: The preposition <i>pella</i> is abnormal in that it is can also be used as a postposition, appearing after the noun it qualifies, such is <i>i cöa pella</i> “the house beyond” vs. <i>pella i cöa</i> “beyond the house”.</li>
+<li>Note ³: Though originally a talat-stem verb, it had become a weak verb. This matters only for its (weak) past: <i>sulpanë</i>.</li>
 </ul>
 
 <h2><a id="x8-1"></a>Exercise 8.1</h2>
@@ -461,7 +463,7 @@
 <li>Your good deed will bring you happiness.</li>
 <li>Some dwarves broke the orcs’ swords.</li>
 <li>Birds have knocked on trees in the forest.</li>
-<li>Horses will pull the wagon swift[ly].</li>
+<li>Horses will swift[ly] pull the wagon.</li>
 <li>The river bends beyond the city.</li>
 </ol>
 
@@ -534,7 +536,7 @@
 <li>**<i>ma sí i hesto quetuva nin?</i> “will now the captain speak to me?”</li>
 </ul>
 
-<p>Finally, like other particles <i>á</i>, <i>vá</i>, and <i>ui</i>, the interrogative <i>ma</i> might receive a pronominal subject suffix if the verb is omitted, such as: <i>Ma túlalyë? Mantë?</i> “Will you come? Will they?” This formation might also be used when responding to a statement with a brief question:</p>
+<p>Finally, like other particles <i>á</i>, <i>vá</i>, and <i>ui</i>, the interrogative <i>ma</i> might receive a pronominal subject suffix if the verb is omitted, such as: <i>Ma túlalyë? Mantë?</i> “Are you coming? Are they?” This formation might also be used when responding to a statement with a brief question:</p>
 
 <ul>
 <li>Statement: <i>Menuvalyë i ostonna enar.</i> “You will go to the city tomorrow.”</li>
@@ -567,7 +569,7 @@
 <li><b>aistana</b> <i>adj.</i> “blessed”</li>
 <li><b>alassë</b> <i>n.</i> “happiness”</li>
 <li>!<b>alassëa</b> <i>adj.</i> “happy”</li>
-<li><b>alma</b> <i>n.</i> “good fortune”</li>
+<li><b>almë</b> <i>n.</i> “good fortune”</li>
 <li><b>avalda</b> [<b>w</b>] <i>adj.</i> “excited”</li>
 <li><b>estel</b> <i>n.</i> “hope, faith”</li>
 <li><b>fasta-</b> <i>v.</i> “to please”
@@ -855,7 +857,7 @@ of the sweet mead in lofty halls ...
 <ul class="vocab-list">
 <li><b>car-</b> <i>v.</i> “to do, make”
 <ul><li><i>pa.t.</i> <b>carnë</b> “did, made”</li></ul></li>
-<li><b>carë</b> <i>n.</i> “action, deed”</li>
+<li><b>carda</b> <i>n.</i> “deed, *action”</li>
 <li><b>cúna-</b> <i>v.</i> “to bend” ¹
 <ul><li><i>pa.t.</i> *<b>cúnanë</b> “bent”</li></ul></li>
 <li><b>mólë</b> <i>n.</i> “labour, work”</li>
@@ -921,7 +923,7 @@ of the sweet mead in lofty halls ...
 <li><b>aistana</b> <i>adj.</i> “blessed”</li>
 <li><b>alassë</b> <i>n.</i> “happiness”</li>
 <li>!<b>alassëa</b> <i>adj.</i> “happy”</li>
-<li><b>alma</b> <i>n.</i> “good fortune”</li>
+<li><b>almë</b> <i>n.</i> “good fortune”</li>
 <li><b>avalda</b> [<b>w</b>] <i>adj.</i> “excited”</li>
 <li><b>estel</b> <i>n.</i> “hope, faith”</li>
 <li><b>fasta-</b> <i>v.</i> “to please”
@@ -1039,16 +1041,16 @@ of the sweet mead in lofty halls ...
 <li>Ya-formative: Aorist <i>orya</i> “rises”, <u>present <i>órëa</i> (or <i>oryëa</i>) “is rising”, future <i>oryuva</i> “will rise”</u>, past <i>oronyë</i> “rose”, <u>perfect <i>(or)órië</i> “has risen”</u></li>
 <li>Ta-causative: Aorist <i>tulta</i> “summons”, <u>present <i>tultëa</i> “is summoning”, future <i>tultauva</i> “will summon”</u>, past <i>tultanë</i> “summoned”, <u>perfect <i>utultië</i> “has summoned” (or <i>utultanië</i>)</u></li>
 <li>Ta-formative: Aorist <i>caita</i> “lies (down)”, <u>present <i>caitëa</i> “is lying (down)”, future <i>caituva</i> “will lie (down)”</u>, past <i>cainë</i> “lay (down)”, <u>perfect <i>acaitië</i> “has layed (down)”</u></li>
-<li>Talat-stem (as weak): Aorist <i>sulpa</i> “laps up”, <u>present <i>sulpëa</i> “is lapping up”, future <i>sulpuva</i> “will lap up”</u>, past <i>sulpanë</i> “lapped up”, <u>perfect <i>usulpanië</i> “has lapped up”</u></li>
+<li>Talat-stem (as weak): Aorist <i>sulpa</i> “laps up”, <u>present <i>sulpëa</i> “is lapping up”, future <i>sulpuva</i> “will lap up”</u>, past <i>sulpanë</i> “lapped up”, <u>perfect <i>usulpië</i> “has lapped up”</u></li>
 <li>Talat-stem (as ta-formative): Aorist <i>talta</i> “collapses”, <u>present <i>taltëa</i> “is collapsing”, future <i>taltuva</i> “will collapse”</u>, past <i>talantë</i> “collapsed”, <u>perfect <i>ataltië</i> “has collapsed”</u></li>
 </ol>
 
 <ol class="exercise-list" start="13">
 <li><i>Mólë tyarnë i olanenyë turca.</i></li>
-<li><i>Mára carelya tulyauva lyen alassë</i> (or more simply <i>tulyuva</i>).</li>
+<li><i>Mára cardalya tulyauva lyen alassë</i> (or more simply <i>tulyuva</i>).</li>
 <li><i>Naucoli rancer i orcoron macili.</i></li>
 <li><i>Aiwi atambanier aldassen mí taurë.</i></li>
-<li><i>Roccor tucuvar i raxa linta.</i></li>
+<li><i>Roccor tucuvar lintë i raxa.</i></li>
 <li><i>I sírë cúna pella i osto.</i></li>
 </ol>
 
@@ -1056,7 +1058,7 @@ of the sweet mead in lofty halls ...
 
 <ol class="exercise-list tengwar-block" start="13">
 <li><span class="transcribe" data-lang="q" data-value="Mólë tyarnë i olanenyë turca">Mólë tyarnë i olanenyë turca</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Mára carelya tulyauva lyen alassë">Mára carelya tulyauva lyen alassë</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Mára cardalya tulyauva lyen alassë">Mára cardalya tulyauva lyen alassë</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Naucoli rancer i orcoron macili">Naucoli rancer i orcoron macili</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Aiwi atambanier aldassen mí taurë">Aiwi atambanier aldassen mí taurë</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Roccor tucuvar i raxa linta">Roccor tucuvar i raxa linta</span></li>
@@ -1111,7 +1113,7 @@ of the sweet mead in lofty halls ...
 <li><i>I orcor yarraner sossessë.</i></li>
 <li><i>Aha i naucoron nánë turwa.</i></li>
 <li><i>I eldar náner nairië i mahtië quantanë i taurë.</i></li>
-<li><i>I nier eldaron sirinyer ve síri.</i></li>
+<li><i>Nier i eldaron sirinyer ve síri.</i></li>
 </ol>
 
 <p>Tengwar answers:</p>
@@ -1122,7 +1124,7 @@ of the sweet mead in lofty halls ...
 <li><span class="transcribe" data-lang="q" data-value="I orcor yarraner þossessë">I orcor yarraner þossessë</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Aha i naucoron nánë turwa">Aha i naucoron nánë turwa</span></li>
 <li><span class="transcribe" data-lang="q" data-value="I eldar náner nairië i mahtië quantanë i taurë">I eldar náner nairië i mahtië quantanë i taurë</span></li>
-<li><span class="transcribe" data-lang="q" data-value="I nier eldaron sirinyer ve síri">I nier eldaron sirinyer ve síri</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Nier i eldaron sirinyer ve síri">Nier i eldaron sirinyer ve síri</span></li>
 </ol>
 
 </body>
