--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-11.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-11.html
@@ -86,7 +86,7 @@
 
 <h2><a id="c11-1-1"></a>11.1.1 Tense vs. Aspect</h2>
 
-<p>Many verb systems for various languages, including Quenya and English, use various factors when determining verb conjugations. Two basic factors are tense (time) and aspect (completeness):</p>
+<p>Many verb systems for various languages, including Quenya and English, use various factors when determining verb conjugations. Two common factors are tense (time) and aspect (completeness):</p>
 
 <ul>
 <li><b>Tense:</b> When the action occurred, past, present or future.</li>
@@ -144,7 +144,7 @@
 <li>Future perfect <i>(a)mátiéva</i> “will have eaten” for actions that will be complete before some other future action.</li>
 </ul>
 
-<p>Note that there is no “past in the future” tense, because the future perfect fulfills this function: <i>yá anyuvalvë i osto, apátiévalvë ter auri neldë</i> “when we arrive at the city, we will have walked for [through] three days”. There is, however a (rare) past future perfect, used in hypothetical past statement much like English “would”:</p>
+<p>Note that there is no “past in the future” tense, because the future perfect fulfills this function: <i>yá anyuvalvë i osto, apátiévalvë ter auri neldë</i> “when we arrive at the city, we will have walked for [through] three days”. There is, however a (rare) past future perfect, used in hypothetical past statements much like English “would”:</p>
 
 <ul>
 <li>Past future perfect <i>(a)mátiévanë</i> “would have eaten” for past hypothetical actions.</li>
@@ -235,7 +235,6 @@
 <li><i>cé</i> “maybe, may”: the normal adverb of uncertainty, marking a statement as possibly unreal.
 <ul>
 <li>This adverb is likely related to the impersonal verb <i>ec-</i> “may, have a chance to” described in <a href="eldamo-intro-quenya-10.html#c10-4-1">Chapter 10, Section §10.4.1</a>.</li>
-<li><i>céla</i> “maybe not” is a negated variant of the above.</li>
 </ul></li>
 <li><i>quí(ta)</i> “supposing, possibly, might”: the strongest level of uncertainty, for things that are either very unlikely or are known to be false, pure hypotheticals.
 <ul>
@@ -385,18 +384,6 @@
 <li><i>quíta túles, amaxien</i> “if he/she had come, I would have cooked”.</li>
 </ul>
 
-<p>The unreality of the counterfactual can be emphasized by adding the negative uncertainty adverb <i>céla</i>:</p>
-
-<ul>
-<li><i>quíta túles céla, amaxien</i> “if he/she had come (he/she did not), I would have cooked”.</li>
-</ul>
-
-<p>If the counterfactual is itself negated, the unreality can be emphasized by adding <i>cé</i> instead:</p>
-
-<ul>
-<li><i>quíta ú túles cé, anaienyë raiqua</i> “if he/she had not come (he/she did), I would have been angry”.</li>
-</ul>
-
 <p>There is a specialized but rarely used past future perfect which can be used for past counterfactuals as well:</p>
 
 <ul>
@@ -410,7 +397,7 @@
 
 <blockquote><i>quí</i> or <i>quíta</i> is used when (a) supposition is known to be not in accord with fact, as in “if he had come (as he did not), I should have welcomed him”, or “if you had not returned (as you did), I should have been angry”. <i>quí(ta) la tuldes, náne márie (nin)</i> “[if he had not come] it was well to me (I was glad)” ... The unreality can be more explicitly expressed by insertion of <i>cé</i>, may be, into a negative protasis [= the first clause of the sentence] or <i>céla</i>, maybe not, into a positive. <i>quíta céla tuldes</i> (PE22/158).</blockquote>
 
-<p>There are a couple of challenges in using this syntax in conjunction with other grammar advocated by this course. In particular, this syntax was coined in the brief 1969 period where Tolkien used la-negation rather than u-negation. That makes forms like <i>céla</i> questionable, but I have no good alternative. The other issue is that this entire paragraph was marked through by Tolkien, but he did not write a replacement.</p>
+<p>There are a couple of challenges in using this syntax in conjunction with other grammar rules advocated by this course. In particular, this syntax was coined in the brief 1969 period where Tolkien used la-negation rather than u-negation. That makes forms like <i>céla</i> questionable, but I have no good alternative. The other issue is that this entire paragraph was marked through by Tolkien, but he did not write a replacement.</p>
 
 <p>The notion that past conditionals which are functionally counterfactuals require a greater uncertainty marker is itself a somewhat well established idea, however. The same basic formula appears in QVS from 1948, but the uncertainty particles are different:</p>
 
@@ -434,12 +421,12 @@
 <li><i>qui cestanes ni, túlen</i> “if/when he asked me, I came”.</li>
 <li><i>quiquië cestanes ni, túlen</i> “whenever he asked me, I came”.</li>
 <li><i>quíta cestanes ni, en utúlien</i> “if he had asked me, [then] I should have come”.</li>
-<li><i>quíta cestanes ni céla, en utúlien</i> “if he had asked me (he did not), [then] I should have come”.</li>
+<li><i>quíta céla cestanes ni, en utúlien</i> “if he had asked me (he did not), [then] I should have come”.</li>
 <li><i>quíta cestanes ni, cé utúlien</i> “if he had asked me, I might have come”.</li>
-<li><i>quíta cestanes (céla)</i> “would he had asked me (he did not)”.</li>
+<li><i>quíta (céla) cestanes</i> “would he had asked me (he did not)”.</li>
 </ul>
 
-<p>Nevertheless, the system I have pieced together here is drawn from some very scattered evidence, and it is therefore rather speculative in nature.</p>
+<p>Nevertheless, the system I have pieced together here is drawn from some very scattered evidence, and it is therefore rather speculative in nature. Of the above, the use of <i>céla</i> “maybe not” is the most questionable, which is why I have omitted it from the main section and only discussed it in the speculative section.</p>
 </div>
 
 <h2><a id="c11-2-5"></a>11.2.5 Vocabulary: Supernatural</h2>
@@ -484,7 +471,6 @@
 <li><i>cé</i> “maybe, may”: the normal adverb of uncertainty, marking a statement as possibly unreal.
 <ul>
 <li>This adverb is likely related to the impersonal verb <i>ec-</i> “may, have a chance to” described in <a href="eldamo-intro-quenya-10.html#c10-4-1">Chapter 10, Section §10.4.1</a>.</li>
-<li><i>céla</i> “maybe not” is a negated variant of the above.</li>
 </ul></li>
 <li><i>quí(ta)</i> “supposing, possibly, might”: the strongest level of uncertainty, for things that are very unlikely or known to be false, pure hypotheticals.
 <ul><li>This also functions as an “emphatic” hypothetical when the result is surprising or counterintuitive.</li></ul></li>
@@ -829,20 +815,20 @@
 <p>The tables above are mostly based on the <i>Declension of Nouns</i> (DN) from the early 1930s (PE21/10) with forms modernized to fit the case system of the 1950s and 60s. In DN, the stem form of “river” was <i>siri-</i> with a short <i>i</i> in the first syllable, and <i>lindi-</i> was glossed “pool” rather than having its later meaning “musical sound”. The descriptions in DN are the best information on the semivocalic declensions, but the dual form <i>siryat</i> appeared in notes from the late 1960s (VT47/11) and is the best evidence that something like these semivocalic declensions remained valid.</p>
 </div>
 
-<p><a id="c11-3-4-2"></a><b>11.3.4.2 w-stem and o/u-noun:</b> For purposes of discussion, this course refers to nouns whose consonants are suitable for combination with <i>w</i> as the w-stem nouns, and these nouns show <i>w</i> in the dative and genitive singular. There is a special case for w-stem nouns with a preceding <i>c</i> consonant: this course refers to them as qu-nouns, where the resulting cluster <i>cw</i> is written <i>qu</i> which also appears in the plural. These declensions are represented by <i>malo</i> (<i>malu-</i>) “pollen”, <i>ranco</i> (<i>rancu-</i>) “arm” and <i>luppo</i> (<i>luppu-</i>) “lump”.</p>
+<p><a id="c11-3-4-2"></a><b>11.3.4.2 w-stem and o/u-noun:</b> For purposes of discussion, this course refers to nouns whose consonants are suitable for combination with <i>w</i> as the w-stem nouns, and these nouns show <i>w</i> in the dative and genitive singular, as well as several of plural forms. There is a special case for w-stem nouns with a preceding <i>c</i> consonant: this course refers to them as qu-nouns, where the resulting cluster <i>cw</i> is written <i>qu</i> which also appears in the plural. Nouns which cannot form clusters with <i>w</i> show <i>u</i> instead in all declined forms. These declensions are represented by <i>malo</i> (<i>malu-</i>) “pollen”, <i>ranco</i> (<i>rancu-</i>) “arm” and <i>luppo</i> (<i>luppu-</i>) “lump”.</p>
 
 <p>
 <center>
 <table>
 <tr><th>w-stem</th><th>Sg.</th><th>Du.</th><th>Part. Pl.</th><th>Pl.</th></tr>
-<tr><td>Nominative</td><td><i>malo</i></td><td><i>malut</i></td><td><i>maluli</i></td><td><i>malur</i></td></tr>
-<tr><td>Dative</td><td><b><i>malwen</i></b> ¹</td><td><i>malunt</i></td><td><i>malulin</i></td><td><i>maluin</i></td></tr>
-<tr><td>Genitive</td><td><b><i>malwo</i></b> ¹</td><td><i>maluto</i></td><td><i>malulion</i></td><td><i>maluron</i></td></tr>
-<tr><td>Possessive</td><td><i>maluva</i></td><td><i>malutwa</i></td><td><i>malulíva</i></td><td><i>maluiva</i></td></tr>
+<tr><td>Nominative</td><td><i>malo</i></td><td><i>malut</i></td><td><i>maluli</i></td><td><b><i>malwi</i></b></td></tr>
+<tr><td>Dative</td><td><b><i>malwen</i></b> ¹</td><td><i>malunt</i></td><td><i>malulin</i></td><td><b><i>malwin</i></b></td></tr>
+<tr><td>Genitive</td><td><b><i>malwo</i></b> ¹</td><td><i>maluto</i></td><td><i>malulion</i></td><td><b><i>malwion</i></b></td></tr>
+<tr><td>Possessive</td><td><i>maluva</i></td><td><i>malutwa</i></td><td><i>malulíva</i></td><td><b><i>malwíva</i></b></td></tr>
 <tr><td>Allative</td><td><i>malunna</i></td><td><i>malunta</i></td><td><i>malulinna(r)</i></td><td><i>malunnar</i></td></tr>
 <tr><td>Ablative</td><td><i>malullo</i></td><td><i>malulto</i></td><td><i>malulillo(n)</i></td><td><i>malullon</i></td></tr>
 <tr><td>Locative</td><td><i>malussë</i></td><td><i>malutsë</i></td><td><i>malulisse(n)</i></td><td><i>malussen</i></td></tr>
-<tr><td>Instrumental</td><td><i>malunen</i></td><td><i>malunten</i></td><td><i>malulínen</i></td><td><i>maluinen</i></td></tr>
+<tr><td>Instrumental</td><td><i>malunen</i></td><td><i>malunten</i></td><td><i>malulínen</i></td><td><b><i>malwínen</i></b></td></tr>
 </table>
 </center>
 </p>
@@ -858,11 +844,11 @@
 <tr><td>Nominative</td><td><i>ranco</i></td><td><i>rancut</i></td><td><i>ranculi</i></td><td><b><i>ranqui</i></b> ²</td></tr>
 <tr><td>Dative</td><td><b><i>ranquen</i></b> ¹</td><td><i>rancunt</i></td><td><i>ranculin</i></td><td><b><i>ranquin</i></b> ²</td></tr>
 <tr><td>Genitive</td><td><b><i>ranquo</i></b> ¹</td><td><i>rancuto</i></td><td><i>ranculion</i></td><td><b><i>ranquion</i></b> ²</td></tr>
-<tr><td>Possessive</td><td><i>rancuva</i></td><td><i>rancutwa</i></td><td><i>ranculíva</i></td><td><b><i>ranquiva</i></b> ²</td></tr>
+<tr><td>Possessive</td><td><i>rancuva</i></td><td><i>rancutwa</i></td><td><i>ranculíva</i></td><td><b><i>ranquíva</i></b> ²</td></tr>
 <tr><td>Allative</td><td><i>rancunna</i></td><td><i>rancunta</i></td><td><i>ranculinna(r)</i></td><td><i>rancunnar</i></td></tr>
 <tr><td>Ablative</td><td><i>rancullo</i></td><td><i>ranculto</i></td><td><i>ranculillo(n)</i></td><td><i>rancullon</i></td></tr>
 <tr><td>Locative</td><td><i>rancussë</i></td><td><i>rancutsë</i></td><td><i>ranculisse(n)</i></td><td><i>rancussen</i></td></tr>
-<tr><td>Instrumental</td><td><i>rancunen</i></td><td><i>rancunten</i></td><td><i>ranculínen</i></td><td><b><i>ranquinen</i></b> ²</td></tr>
+<tr><td>Instrumental</td><td><i>rancunen</i></td><td><i>rancunten</i></td><td><i>ranculínen</i></td><td><b><i>ranquínen</i></b> ²</td></tr>
 </table>
 </center>
 </p>
@@ -974,7 +960,7 @@
 </p>
 
 <ul>
-<li>Note ¹: The partitive plurals of nouns ending in <i>n</i> and <i>r</i> show assimilation to the suffix <i>-li</i>, with the net result that they have <i>-lli</i> in their partitive plurals like nouns ending in <i>l</i>. Attested examples include <i>Caralli</i> the partitive plural of <i>Casar</i> “Dwarf” (WJ/388) and <i>elelli</i> the partitive plural of <i>elen</i> “star” (PE17/127). It is unclear how nouns without suitable assimilations form their partitive plurals, but (<span class="advanced-topic">speculative</span>) I believe they use a joining vowel <i>e</i>.</li>
+<li>Note ¹: The partitive plurals of nouns ending in <i>n</i> and <i>r</i> show assimilation to the suffix <i>-li</i>, with the net result that they have <i>-lli</i> in their partitive plurals like nouns ending in <i>l</i>. Attested examples include <i>Casalli</i> the partitive plural of <i>Casar</i> “Dwarf” (WJ/388) and <i>elelli</i> the partitive plural of <i>elen</i> “star” (PE17/127). It is unclear how nouns without suitable assimilations form their partitive plurals, but (<span class="advanced-topic">speculative</span>) I believe they use a joining vowel <i>e</i>.</li>
 <li>Note ²: Nouns ending in <i>l</i> and <i>n</i> generally shorten their ablative and allative forms: <i>tecillo</i> “from a pen” and <i>tirionna</i> “to a watch tower”. Such shortened forms may occur in other situations, possibly with consonantal assimilations, but the details are complex and I recommend sticking to longer case suffixes as a rule. See <a href="eldamo-intro-quenya-07.html#c7-3-4">Chapter 7, Section §7.3.4</a> for a discussion of these assimilated directional noun cases.</li>
 <li>Note ³: The instrumental case shows various assimilations with nouns whose stems end in single consonant: <i>-men</i> after <i>r, l</i>, <i>-wen</i> after <i>n, t, c</i>, and <i>-nen</i> after <i>m</i> (PE21/20-24).</li>
 <li>Note ⁴: Long consonantal nouns with light second-to-last syllables show prosodic lengthening in the final vowel of their stem when they receive a suffix starting with a short vowel followed by zero or one consonant: dative <i>tiri<u>ó</u>nen</i> “to/for a watch tower”, plural <i>imbil<u>á</u>ti</i> “deep valleys” (PE21/35-36).</li>
@@ -1238,9 +1224,9 @@
 <ul>
 <li>Note ¹: As noted above, the plurals and duals of this class of noun are unpredictable. For example, the plurals of <i>má</i> “hand” and <i>pé</i> “(closed) mouth” are rarely used, with their partitive plurals being the usual substitute (VT47/3; PE21/38). The dual of <i>pé</i> is <i>peu</i> (= “two lips”), and (hypothetically) the plural of <i>sú</i> “sound of wind” would be <i>súvi</i> along with genitive plural <i>suion</i> (following the pattern of <i>heru</i> “lord” above), but in practice this noun is almost always used in the singular.</li>
 <li>Note ²: Where the case suffix for these nouns begins with a consonant cluster, such as with the directional cases, the long vowel shortens. There is an exception for w- and y-clusters like (<span class="advanced-topic">speculative</span>) <i>-twa</i> which allow a preceding long vowel. This applies to possessive pronoun suffixes as well: <i>márya</i> “his/her hand” (LotR/377; PE22/160).</li>
-<li>Note ³: Plural suffixes that begin with an <i>i</i> will result in diphthongs when added to a-, o- and u-monosyllables, which likewise shortens the long vowel such as with dative plural <i>main</i> “of hands” (PE17/161).</li>
+<li>Note ³: Plural suffixes that begin with an <i>i</i> will result in diphthongs when added to a-, o- and u-monosyllables, which likewise shortens the long vowel such as with dative plural <i>main</i> “for hands” (PE17/161).</li>
 <li>Note ⁴: With e-monosyllables, any plural <i>i</i> suffixes would become <i>í</i>, since <i>ei</i> &gt; <i>í</i> in Quenya’s phonetic development. As a result, the plural forms of <i>pé</i> “(closed) mouth” and <i>pí</i> “small insect” would collide. In practice this is not an issue because the plurals of <i>pé</i> are not used, being replaced by their partitive plurals instead.</li>
-<li>Note ⁵: The <i>u</i>-duals usually show a long <i>u</i> in the possessive (<i>-úva</i>) and instrumental (<i>-únen</i>), but this is not possible when they are preceded by a vowel like <i>peu</i> “two lips”: <i>peuva</i> “of two lips”, <i>peunen</i> “by two lips’”. <span class="advanced-topic">Speculative:</span> The genitive dual <i>peuo</i> “of two lips” is probably stressed on its middle vowel: <i>peùo</i>. Alternately it might use a glide consonant: <i>peuvo</i>.</li>
+<li>Note ⁵: The <i>u</i>-duals usually show a long <i>u</i> in the possessive (<i>-úva</i>) and instrumental (<i>-únen</i>), but this is not possible when they are preceded by a vowel like <i>peu</i> “two lips”: <i>peuo</i> “of two lips”, <i>peuva</i> “two lips’”, <i>peunen</i> “by two lips’”.</li>
 <li>Note ⁶: The vocalic monosyllables retain their long vowel before the genitive singular suffix <i>-o</i>, even in the case of a-monosyllables: <i>máo</i> “of a hand” (PE17/161). <span class="advanced-topic">Speculative:</span> The genitives of o-monosyllables have <i>uo</i> for reasons similar to those of oa-nouns (see <a href="#c11-3-1-2">section §11.3.1.2</a> above), except that by analogy with u-monosyllables the <i>u</i> become long: <i>húo</i> “of an owl”.</li>
 </ul>
 
@@ -1277,7 +1263,7 @@
 <p>Here are miscellaneous nouns introduced in this section:</p>
 
 <ul class="vocab-list">
-<li><b>caimasan</b> (<b>caimasamb-</b>) <i>n.</i> “bedroom”</li>
+<li><b>caimasan</b> [<b>þ</b>] (<b>caimasamb-</b>) <i>n.</i> “bedroom”</li>
 <li><b>filit</b> (<b>filic-</b>) <i>n.</i> “sparrow, small bird”</li>
 <li><b>hiswa</b> [<b>þ</b>] <i>adj.</i> “grey [of weather]”</li>
 <li>^<b>hó</b> <i>n.</i> “owl”</li>
@@ -1396,7 +1382,7 @@
 <p><b><u>Miscellaneous:</u></b></p>
 
 <ul class="vocab-list">
-<li><b>caimasan</b> (<b>caimasamb-</b>) <i>n.</i> “bedroom”</li>
+<li><b>caimasan</b> [<b>þ</b>] (<b>caimasamb-</b>) <i>n.</i> “bedroom”</li>
 <li><b>filit</b> (<b>filic-</b>) <i>n.</i> “sparrow, small bird”</li>
 <li><b>hiswa</b> [<b>þ</b>] <i>adj.</i> “grey [of weather]”</li>
 <li>^<b>hó</b> <i>n.</i> “owl”</li>
@@ -1443,7 +1429,6 @@
 <li><i>cé</i> “maybe, may”: the normal adverb of uncertainty, marking a statement as possibly unreal.
 <ul>
 <li>This adverb is likely related to the impersonal verb <i>ec-</i> “may, have a chance to” described in <a href="eldamo-intro-quenya-10.html#c10-4-1">Chapter 10, Section §10.4.1</a>.</li>
-<li><i>céla</i> “maybe not” is a negated variant of the above.</li>
 </ul></li>
 <li><i>quí(ta)</i> “supposing, possibly, might”: the strongest level of uncertainty, for things that are very unlikely or known to be false, pure hypotheticals.
 <ul><li>This also functions as an “emphatic” hypothetical when the result is surprising or counterintuitive.</li></ul></li>
