--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-12.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-12.html
@@ -178,7 +178,7 @@
 <li>The base word is three or more syllables long.</li>
 <li>The word ends in a vowel and the suffix begins with a single consonant: <i>telumë</i> + <i>-va</i> → <i>telum<u>é</u>va</i>.</li>
 <li>Alternately, the word ends in a single consonant and the suffix begins with a vowel (possible followed by one consonant): <i>Atanatar</i> + <i>-i</i> → <i>Atanat<u>á</u>ri</i>.</li>
-<li>The second-to-last syllable of the base word cannot be stressed:
+<li>Lengthening does not occur if the second-to-last syllable of the base word is stressed:
 <ul>
 <li><i>telumë</i> + <i>-li</i> → <i>telum<u>é</u>li</i> but <i>falassë</i> + <i>-li</i> → <i>falasseli</i></li>
 </ul>
@@ -452,12 +452,12 @@
 <tr><td><nobr><b>2nd sg. fam.</b></nobr> “you, your (familiar)”</td><td><i>tye</i></td><td><i>-t(yë)</i> ¹</td><td><i>-(i)tya</i></td><td>*<i>ityë</i></td></tr>
 <tr><td><nobr><b>2nd sg. pol.</b></nobr> “you, your (polite)”</td><td><i>lye</i></td><td><i>-l(yë)</i></td><td><i>-(e)lya</i></td><td><i>elyë</i></td></tr>
 <tr><td><nobr><b>3rd sg. anim.</b></nobr> “him/her, he/she, his/her”</td><td><i>se</i></td><td><i>-s(së)</i></td><td><i>-(r)ya</i> ²</td><td><i>issë</i></td></tr>
-<tr><td><nobr><b>3rd sg. inan.</b></nobr> “it, its”</td><td><i>sa</i></td><td><i>-s(sa)</i></td><td>—</td><td>*<i>issa</i></td></tr>
+<tr><td><nobr><b>3rd sg. inan.</b></nobr> “it, its”</td><td><i>sa</i></td><td><i>-s(sa)</i> ⁴</td><td>—</td><td>*<i>issa</i></td></tr>
 <tr><td><nobr><b>1st pl. excl.</b></nobr> “us, we, our (but not you)”</td><td><i>me</i></td><td><i>-lmë</i></td><td><i>-(e)lma</i></td><td><i>elmë</i></td></tr>
 <tr><td><nobr><b>1st pl. incl.</b></nobr> “us, we, our (including you)”</td><td><i>ve</i></td><td><i>-lvë</i></td><td><i>-(e)lva</i></td><td><i>elvë</i></td></tr>
 <tr><td><nobr><b>2nd pl.</b></nobr> “you, your (plural)”</td><td><i>le</i></td><td><i>-ldë</i></td><td><i>-(e)lda</i></td><td>*<i>eldë</i></td></tr>
 <tr><td><nobr><b>3rd pl. anim.</b></nobr> “them, they, their”</td><td><i>te</i></td><td><i>-ntë</i> ³</td><td><i>-(i)nta</i></td><td><i>intë</i></td></tr>
-<tr><td><nobr><b>3rd pl. inan.</b></nobr> “them, they (neuter)”</td><td><i>tai</i></td><td><i>-nta</i></td><td>—</td><td>*<i>inta</i></td></tr>
+<tr><td><nobr><b>3rd pl. inan.</b></nobr> “them, they (neuter)”</td><td><i>tai</i></td><td><i>-nta</i> ⁴</td><td>—</td><td>*<i>inta</i></td></tr>
 <tr><td><nobr><b>1st du. excl.</b></nobr> “us two (but not you)”</td><td><i>met</i></td><td><i>-mmë</i></td><td><i>-(e)mma</i></td><td>^<i>emmë</i></td></tr>
 <tr><td><nobr><b>1st du. incl.</b></nobr> “both of us”</td><td><i>vet</i></td><td><i>-nquë</i></td><td><i>-(i)nqua</i></td><td><i>inquë</i></td></tr>
 <tr><td><nobr><b>2nd du.</b></nobr> “you two”</td><td><i>tyet/let</i></td><td><i>-stë</i></td><td><i>-(e)sta</i></td><td>*<i>estë</i></td></tr>
@@ -469,6 +469,7 @@
 <li>Note ¹: Singular subject pronouns have short and long forms, with the short form being more common unless object suffixes are added. The exception is <i>-t(yë)</i>, where the long form <i>-tyë</i> is much more common and short <i>-t</i> should generally be avoided.</li>
 <li>Note ²: The possessive suffixes require a joining vowel when added to a noun ending in a consonant. The exception is <i>-(r)ya</i>, which uses <i>-ya</i> after a consonant and <i>-rya</i> after a vowel. <span class="advanced-topic">Speculative:</span> The joining vowel seems to be the same as the initial vowel of the emphatic form.</li>
 <li>Note ³: Popular variants of the 3rd pl. pronoun suffixes are <i>-ltë, -(i)lta</i>; both <i>-ltë</i> and <i>-ntë</i> were used often enough by Tolkien that it is hard to say which he preferred. This course uses <i>-ntë</i> throughout for consistency.</li>
+<li>Note ⁴: The inanimate subject suffixes appear only in one chart from the late 1950s or early 1960s (PE17/57), making them more questionable. Many people prefer to use the animate suffixes <i>-s(se)</i> and <i>-nte/-lte</i> for inanimates as well.</li>
 </ul>
 
 <p>Quenya has other pronouns which can be found in the vocabulary.</p>
@@ -912,7 +913,6 @@
 <li><i>cé</i> “maybe, may”: the normal adverb of uncertainty, marking a statement as possibly unreal.
 <ul>
 <li>This adverb is likely related to the impersonal verb <i>ec-</i> “may, have a chance to” described in <a href="eldamo-intro-quenya-10.html#c10-4-1">Chapter 10, Section §10.4.1</a>.</li>
-<li><i>céla</i> “maybe not” is a negated variant of the above.</li>
 </ul></li>
 <li><i>quí(ta)</i> “supposing, possibly, might”: the strongest level of uncertainty, for things that are very unlikely or known to be false, pure hypotheticals.
 <ul><li>This also functions as an “emphatic” hypothetical when the result is surprising or counterintuitive.</li></ul></li>
