--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-13.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-13.html
@@ -90,7 +90,7 @@
 <li><b>alda</b> <i>n.</i> “tree”</li>
 <li><b>Aldúya</b> <i>n.</i> “Tuesday; Trees-day”</li>
 <li><b>alfírima</b> <i>adj.</i> “immortal”</li>
-<li><b>alma</b> <i>n.</i> “good fortune”</li>
+<li><b>almë</b> <i>n.</i> “good fortune”</li>
 <li><b>alqua</b> <i>n.</i> “swan”</li>
 <li><b>alya</b> <i>adj.</i> “rich, prosperous”</li>
 <li><b>amanya</b> <i>adj.</i> “blessed”</li>
@@ -106,7 +106,7 @@
 <li><b>ampano</b> <i>n.</i> “building”</li>
 <li><b>an</b> <i>conj.</i> “for”</li>
 <li><b>ana</b> <i>prep.</i> “to, towards”</li>
-<li><b>Anar</b> <i>n.</i> “Sun”</li>
+<li><b>Anar</b> (<b>Anár-</b>) <i>n.</i> “Sun”</li>
 <li><b>Anarya</b> <i>n.</i> “Sunday”</li>
 <li><b>anca</b> <i>n.</i> “jaws”</li>
 <li><b>anda</b> <i>adj.</i> “long”</li>
@@ -130,6 +130,7 @@
 <li><b>arda</b> <i>n.</i> “realm”</li>
 <li><b>arin</b> <i>n.</i> “morning”</li>
 <li><b>armar</b> <i>n.</i> “goods [pl.]”</li>
+<li><b>arya</b> <i>adj.</i> “excelling, *better”</li>
 <li><b>asarta</b> [<b>þ</b>] <i>n.</i> “doctor”</li>
 <li><b>asëa</b> [<b>þ</b>] <i>n.</i> “healing herb”</li>
 <li><b>assa</b> <i>n.</i> “hole”</li>
@@ -150,7 +151,7 @@
 <a id="c"></a>
 <ul class="vocab-list">
 <li><b>caima</b> <i>n.</i> “bed”</li>
-<li><b>caimasan</b> (<b>caimasamb-</b>) <i>n.</i> “bedroom”</li>
+<li><b>caimasan</b> [<b>þ</b>] (<b>caimasamb-</b>) <i>n.</i> “bedroom”</li>
 <li><b>caita-</b> <i>v.</i> “to lie (down); to lay, place”<ul><li><i>pa.t.</i> <b>cainë</b> “lied down”</li><li><i>pa.t.</i> <b>caitanë</b> “laid, placed”</li></ul></li>
 <li><b>cal-</b> <i>v.</i> “to shine”<ul><li><i>pa.t.</i> ^<b>callë</b> “shone”</li></ul></li>
 <li><b>cala</b> <i>n.</i> “light”</li>
@@ -168,7 +169,7 @@
 <li><b>car-</b> <i>v.</i> “to do, make”<ul><li><i>pa.t.</i> <b>carnë</b> “did, made”</li></ul></li>
 <li><b>carasta-</b> <i>v.</i> “to build”<ul><li><i>pa.t.</i> *<b>carastanë</b> “built”</li></ul></li>
 <li><b>carca</b> <i>n.</i> “fang”</li>
-<li><b>carë</b> <i>n.</i> “action, deed”</li>
+<li><b>carda</b> <i>n.</i> “deed, *action”</li>
 <li><b>carnë</b> (<b>carni-</b>) <i>adj.</i> “red”</li>
 <li><b>cas</b> (<b>car-</b>) <i>n.</i> “head; top”</li>
 <li><b>castol</b> <i>n.</i> “helmet”</li>
@@ -183,6 +184,7 @@
 <li><b>Cermië</b> <i>n.</i> “July, *Earthy”</li>
 <li><b>ces-</b> [<b>þ</b>] <i>v.</i> “to search, examine”<ul><li><i>pa.t.</i> <b>censë</b> “searched, examined”</li></ul></li>
 <li><b>cesta-</b> <i>v.</i> “to ask”<ul><li><i>pa.t.</i> <b>cestanë</b> “asked”</li></ul></li>
+<li><b>cir-</b> <i>v.</i> “to cut”<ul><li><i>pa.t.</i> *<b>cirnë</b> “cut”</li></ul></li>
 <li><b>cirma</b> <i>n.</i> “knife”</li>
 <li><b>cirya</b> <i>n.</i> “ship”</li>
 <li><b>ciryamo</b> <i>n.</i> “sailor”</li>
@@ -193,7 +195,7 @@
 <li>^<b>colca</b> <i>n.</i> “box”</li>
 <li><b>cólima</b> <i>adj.</i> “light, bearable”</li>
 <li><b>collo</b> <i>n.</i> “cloak”</li>
-<li><b>coranar</b> <i>n.</i> “(solar) year, sun-round”</li>
+<li><b>coranar</b> (<b>coranár-</b>) <i>n.</i> “(solar) year, sun-round”</li>
 <li><b>corma</b> <i>n.</i> “ring”</li>
 <li><b>corna</b> <i>adj.</i> “round”</li>
 <li><b>coron</b> (<b>corn-</b>) <i>n.</i> “globe, ball”</li>
@@ -325,7 +327,7 @@
 <li>#<b>hildë</b> (<b>hildi-</b>) <i>n.</i> “heir, follower”</li>
 <li><b>hilya-</b> <i>v.</i> “to follow”<ul><li><i>pa.t.</i> *<b>hilyanë</b> “followed”</li></ul></li>
 <li><b>hína</b> <i>n.</i> “child”<ul><li>irregular plural <b>híni</b> “children”</li></ul></li>
-<li><b>hir-</b> <i>v.</i> “to find”<ul><li><i>pa.t.</i> *<b>hirnë</b> “found”</li></ul></li>
+<li><b>hir-</b> <i>v.</i> “to find [something lost]”<ul><li><i>pa.t.</i> *<b>hirnë</b> “found”</li></ul></li>
 <li><b>Hísimë</b> [<b>þ</b>] <i>n.</i> “November, *Misty”</li>
 <li><b>hiswa</b> [<b>þ</b>] <i>adj.</i> “grey [of weather]”</li>
 <li>^<b>hlaiwa</b> <i>adj.</i> “sick”</li>
@@ -576,7 +578,7 @@
 <li><b>mírë</b> <i>n.</i> “jewel, gem”</li>
 <li><b>miruvórë</b> <i>n.</i> “mead, nectar-drink”</li>
 <li><b>mirwa</b> <i>adj.</i> “precious, valuable”</li>
-<li><b>mísë</b> [<b>þ</b>] <i>adj.</i> “grey”</li>
+<li><b>mísë</b> (<b>mísi-</b>) [<b>þ</b>] <i>adj.</i> “grey”</li>
 <li><b>miuë</b> (<b>miuy-</b>) <i>n.</i> “cat”</li>
 <li><b>-mma</b> <i>suf.</i> “our two (but not your)”</li>
 <li><b>-mmë</b> <i>suf.</i> “we two (but not you)”</li>
@@ -750,6 +752,7 @@
 <li><b>pasta</b> <i>adj.</i> “smooth”</li>
 <li><b>pata-</b> <i>v.</i> “to walk”<ul><li><i>pa.t.</i> *<b>patanë</b> “walked”</li></ul></li>
 <li><b>pé</b> <i>n.</i> “(closed) mouth”</li>
+<li><b>pella</b> <i>prep.</i> “beyond”</li>
 <li><b>pempë</b> <i>n.</i> “a lip”</li>
 <li><b>pen-</b> <i>v.</i> “not to have, lack”<ul><li><i>pa.t.</i> *<b>pennë</b> “lacked”</li></ul></li>
 <li><b>penya</b> <i>adj.</i> “lacking, poor”</li>
@@ -956,6 +959,7 @@
 <li>^<b>tel</b> (<b>teld-</b>) <i>n.</i> “end [spatial]”</li>
 <li><b>telco</b> <i>n.</i> “leg; stem”</li>
 <li><b>telda</b> <i>adj.</i> “last, final”</li>
+<li><b>telumë</b> <i>n.</i> “roof, canopy”</li>
 <li><b>tellë</b> <i>n.</i> “rear”</li>
 <li><b>telpë</b> <i>n.</i> “silver, money”</li>
 <li><b>telya-</b> <i>v.</i> “to finish”<ul><li><i>pa.t.</i> *<b>telyanë</b> “finished”</li></ul></li>
@@ -1003,6 +1007,7 @@
 <li><b>turca</b> <i>adj.</i> “strong (physically)”</li>
 <li><b>turu-</b> <i>v.</i> “to master, defeat”<ul><li><i>pa.t.</i> *<b>turunë</b> “mastered, defeated”</li></ul></li>
 <li>^<b>turwa</b> <i>adj.</i> “powerful”</li>
+<li><b>tuv-</b> <i>v.</i> “to find, discover”<ul><li><i>pa.t.</i> <b>túvë</b> “found, discovered”</li></ul></li>
 <li><b>-tya</b> <i>suf.</i> “your (familiar)”</li>
 <li><b>tyal-</b> <i>v.</i> “to play”<ul><li><i>pa.t.</i> ?<b>tyallë</b> “played”</li></ul></li>
 <li><b>tyalië</b> <i>n.</i> “play, mirth”</li>
@@ -1024,6 +1029,7 @@
 <a id="u"></a>
 <ul class="vocab-list">
 <li><b>ú</b> <i>adv.</i> “not”</li>
+<li><b>ú</b> <i>prep.</i> “without” [with genitive]</li>
 <li><b>uhta-</b> <i>v.</i> “to dislike”<ul><li><i>pa.t.</i> *<b>uhtanë</b> “disliked”</li></ul></li>
 <li><b>ui</b> <i>interj.</i> “no, it is not”</li>
 <li><b>ui-</b> <i>v.</i> “to not be”<ul><li><i>pa.t.</i> <b>únë</b> “was not”</li></ul></li>
@@ -1084,7 +1090,7 @@
 <li><b>vista-</b> <i>v.</i> “to change [something]”<ul><li><i>pa.t.</i> <b>vistanë</b> “changed [something]”</li></ul></li>
 <li><b>vista</b> <i>n.</i> “air (as a substance)”</li>
 <li><b>voronda</b> <i>adj.</i> “faithful, loyal”</li>
-<li><b>voronwë</b> <i>n.</i> “faith”</li>
+<li><b>voronwë</b> <i>n.</i> “faith, loyalty”</li>
 </ul>
 
 <hr/>
