--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-14.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-14.html
@@ -49,7 +49,7 @@
 <li>“above” <i>prep.</i> <b>or</b></li>
 <li>“account” <i>n.</i> <b>nyárë</b></li>
 <li>“accursed” <i>adj.</i> <b>húna</b></li>
-<li>“action” <i>n.</i> <b>carë</b></li>
+<li>“action” <i>n.</i> <b>carda</b></li>
 <li>“admirable” <i>adj.</i> <b>maira</b></li>
 <li>“after (time)” <i>prep.</i> <b>epë</b></li>
 <li>“agent” <i>n.</i> <b>tyaro</b></li>
@@ -115,7 +115,7 @@
 <li>“beautiful” <i>adj.</i> <b>vanima</b></li>
 <li>“become” <i>v.</i> <b>ola-</b><ul><li>“became” <i>pa.t.</i> <b>olanë</b></li></ul></li>
 <li>“bed” <i>n.</i> <b>caima</b></li>
-<li>“bedroom” <i>n.</i> <b>caimasan</b> (<b>caimasamb-</b>)</li>
+<li>“bedroom” <i>n.</i> <b>caimasan</b> [<b>þ</b>] (<b>caimasamb-</b>)</li>
 <li>“before (place)” <i>prep.</i> <b>epë</b></li>
 <li>“before (time)” <i>prep.</i> <b>nó</b></li>
 <li>“beget” <i>v.</i> <b>onta-</b><ul><li>“begat” <i>pa.t.</i> <b>ontanë</b></li></ul></li>
@@ -131,7 +131,9 @@
 <li>“beneath” <i>adv.</i> <b>undu</b></li>
 <li>“bent” <i>adj.</i> <b>locin</b></li>
 <li>“beside” <i>prep.</i> <b>ara</b></li>
+<li>“better” <i>adj.</i> <b>arya</b></li>
 <li>“between” <i>prep.</i> <b>imbë</b></li>
+<li>“beyond” <i>prep.</i> <b>pella</b></li>
 <li>“big” <i>adj.</i> <b>höa</b></li>
 <li>“big (and strong)” <i>adj.</i> <b>polda</b></li>
 <li>“bird” <i>n.</i> <b>aiwë</b></li>
@@ -193,6 +195,7 @@
 <li>“came” <i>pa.t.</i> <b>túlë</b></li>
 <li>“can” <i>v.</i> <b>pol-</b><ul><li>“could” <i>pa.t.</i> *<b>pollë</b></li></ul></li>
 <li>“candle” <i>n.</i> <b>lícuma</b></li>
+<li>“canopy” <i>n.</i> <b>telumë</b></li>
 <li>“captain” <i>n.</i> <b>hesto</b></li>
 <li>“care (have care for)” <i>v.</i> !<b>nil-</b><ul><li>“cared for” <i>pa.t.</i> !<b>nillë</b></li></ul></li>
 <li>“carry” <i>v.</i> <b>col-</b><ul><li>“carried” <i>pa.t.</i> *<b>collë</b></li></ul></li>
@@ -251,6 +254,7 @@
 <li>“crooked” <i>adj.</i> <b>raica</b></li>
 <li>“crowd” <i>n.</i> <b>rimbë</b></li>
 <li>“cup” <i>n.</i> <b>yulma</b></li>
+<li>“cut” <i>v.</i> <b>cir-</b><ul><li>“cut” <i>pa.t.</i> *<b>cirnë</b></li></ul></li>
 <li>“cure” <i>v.</i> <b>hasa-</b> [<b>þ</b>]<ul><li>“cured” <i>pa.t.</i> *<b>hasanë</b></li></ul></li>
 <li>“curse” <i>v.</i> <b>húta-</b><ul><li>“cursed” <i>pa.t.</i> <b>huntë</b></li></ul></li>
 </ul>
@@ -274,7 +278,7 @@
 <li>“death (agony)” <i>n.</i> <b>qualmë</b></li>
 <li>“death (natural)” <i>n.</i> <b>fírië</b></li>
 <li>“December” <i>n.</i> <b>Ringarë</b></li>
-<li>“deed” <i>n.</i> <b>carë</b></li>
+<li>“deed” <i>n.</i> <b>carda</b></li>
 <li>“deep” <i>adj.</i> <b>núra</b></li>
 <li>“deep valley” <i>n.</i> <b>imbilat</b></li>
 <li>“defeat” <i>v.</i> <b>turu-</b><ul><li>“defeated” <i>pa.t.</i> *<b>turunë</b></li></ul></li>
@@ -289,6 +293,7 @@
 <li>“dig” <i>v.</i> ^<b>sap-</b><ul><li>“dug” <i>pa.t.</i> ^<b>sampë</b></li></ul></li>
 <li>“dim” <i>adj.</i> <b>néca</b></li>
 <li>“dirty” <i>adj.</i> <b>vára</b></li>
+<li>“discover” <i>v.</i> <b>tuv-</b><ul><li>“discovered” <i>pa.t.</i> <b>túvë</b></li></ul></li>
 <li>“dislike” <i>v.</i> <b>uhta-</b><ul><li>“disliked” <i>pa.t.</i> *<b>uhtanë</b></li></ul></li>
 <li>“do” <i>v.</i> <b>car-</b><ul><li>“did” <i>pa.t.</i> <b>carnë</b></li></ul></li>
 <li>“doctor” <i>n.</i> <b>asarta</b> [<b>þ</b>]</li>
@@ -342,6 +347,7 @@
 <li>“evil” <i>adj.</i> <b>ulca</b></li>
 <li>“examine” <i>v.</i> <b>ces-</b> [<b>þ</b>]<ul><li>“examined” <i>pa.t.</i> <b>censë</b></li></ul></li>
 <li>“excellent” <i>adj.</i> <b>maira</b></li>
+<li>“excelling” <i>adj.</i> <b>arya</b></li>
 <li>“excited” <i>adj.</i> <b>avalda</b> [<b>w</b>]</li>
 <li>“exist” <i>v.</i> <b>ëa-</b><ul><li>“existed” <i>pa.t.</i> <b>engë</b></li></ul></li>
 <li>“Existence” <i>n.</i> <b>Ëa</b></li>
@@ -386,7 +392,9 @@
 <li>“fight” <i>v.</i> <b>mahta-</b><ul><li>“fought” <i>pa.t.</i> <b>mahtanë</b></li></ul></li>
 <li>“fill” <i>v.</i> <b>quanta-</b><ul><li>“filled” <i>pa.t.</i> ^<b>quantanë</b></li></ul></li>
 <li>“final” <i>adj.</i> <b>telda</b></li>
-<li>“find” <i>v.</i> <b>hir-</b><ul><li>“found” <i>pa.t.</i> *<b>hirnë</b></li></ul></li>
+<li>“find [something lost]” <i>v.</i> <b>hir-</b><ul><li>“found” <i>pa.t.</i> *<b>hirnë</b></li></ul></li>
+<li>“find [discover]” <i>v.</i> <b>tuv-</b><ul><li>“found [discovered]” <i>pa.t.</i> <b>túvë</b></li></ul></li>
+<li>“find [something lost]” <i>v.</i> <b>hir-</b><ul><li>“found” <i>pa.t.</i> *<b>hirnë</b></li></ul></li>
 <li>“finger” <i>n.</i> <b>leper</b></li>
 <li>“finish” <i>v.</i> <b>telya-</b><ul><li>“finished” <i>pa.t.</i> *<b>telyanë</b></li></ul></li>
 <li>“fire” <i>n.</i> <b>nárë</b></li>
@@ -462,7 +470,7 @@
 <li>“gone” <i>adj.</i> <b>vanwa</b></li>
 <li>“good (moral)” <i>adj.</i> <b>manë</b></li>
 <li>“good (useful)” <i>adj.</i> <b>mára</b></li>
-<li>“good fortune” <i>n.</i> <b>alma</b></li>
+<li>“good fortune” <i>n.</i> <b>almë</b></li>
 <li>“good health” <i>n.</i> <b>málë</b></li>
 <li>“goodness” <i>n.</i> <b>márië</b></li>
 <li>“goods [pl.]” <i>n.</i> <b>armar</b></li>
@@ -475,7 +483,7 @@
 <li>“greetings (in happiness)” <i>interj.</i> <b>máriessë</b></li>
 <li>“grey” <i>adj.</i> <b>sinda</b> [<b>þ</b>]</li>
 <li>“grey (of weather)” <i>adj.</i> <b>hiswa</b> [<b>þ</b>]</li>
-<li>“grey (misty)” <i>adj.</i> <b>mísë</b> [<b>þ</b>]</li>
+<li>“grey (misty)” <i>adj.</i> <b>mísë</b> (<b>mísi-</b>) [<b>þ</b>]</li>
 <li>“grow (older)” <i>v.</i> <b>ola-</b><ul><li>“grew (older)” <i>pa.t.</i> <b>olanë</b></li></ul></li>
 <li>“grow (of plants)” <i>v.</i> <b>ala-</b><ul><li>“grew (of plants)” <i>pa.t.</i> <b>alanë</b></li></ul></li>
 <li>“growl” <i>v.</i> <b>yarra-</b><ul><li>“growled” <i>pa.t.</i> *<b>yarranë</b></li></ul></li>
@@ -686,6 +694,7 @@
 <li>“lover (m.)” <i>n.</i> <b>melindo</b></li>
 <li>“low” <i>adj.</i> <b>tumna</b></li>
 <li>“loyal” <i>adj.</i> <b>voronda</b></li>
+<li>“loyalty” <i>n.</i> <b>voronwë</b></li>
 <li>“lump” <i>n.</i> <b>luppo</b> (<b>luppu-</b>)</li>
 <li>“lust” <i>n.</i> <b>mailë</b></li>
 <li>“lustful” <i>adj.</i> <b>mailëa</b></li>
@@ -915,6 +924,7 @@
 <li>“rode” <i>pa.t.</i> <b>nortanë</b></li>
 <li>“rose” <i>pa.t.</i> <b>oronyë</b></li>
 <li>“roof” <i>n.</i> <b>tópa</b></li>
+<li>“roof (canopy)” <i>n.</i> <b>telumë</b></li>
 <li>“room” <i>n.</i> <b>sambë</b> [<b>þ</b>]</li>
 <li>“root” <i>n.</i> <b>sundo</b> [<b>þ</b>]</li>
 <li>“rope” <i>n.</i> ^<b>hempa</b></li>
@@ -1078,7 +1088,7 @@
 <li>“summer” <i>n.</i> <b>lairë</b></li>
 <li>“summon (call)” <i>v.</i> <b>yal-</b><ul><li>“summoned” <i>pa.t.</i> *<b>yallë</b></li></ul></li>
 <li>“summon (send for)” <i>v.</i> <b>tulta-</b><ul><li>“summoned” <i>pa.t.</i> <b>tultanë</b></li></ul></li>
-<li>“Sun” <i>n.</i> <b>Anar</b></li>
+<li>“Sun” <i>n.</i> <b>Anar</b> (<b>Anár-</b>)</li>
 <li>“Sunday” <i>n.</i> <b>Anarya</b></li>
 <li>“sunset” <i>n.</i> <b>andúnë</b></li>
 <li>“sure (fixed, firm)” <i>adj.</i> <b>tanca</b></li>
@@ -1318,6 +1328,7 @@
 <li>“wish” <i>v.</i> <b>mer-</b><ul><li>“wished” <i>pa.t.</i> <b>mernë</b></li></ul></li>
 <li>“witch” <i>n.</i> ^<b>curuni</b></li>
 <li>“with (together)” <i>prep.</i> <b>ó</b></li>
+<li>“without” <i>prep.</i> <b>ú</b> [with genitive]</li>
 <li>“wizard” <i>n.</i> <b>sairon</b></li>
 <li>“wolf” <i>n.</i> <b>ráca</b></li>
 <li>“woman” <i>n.</i> <b>nís</b> (<b>niss-</b>)</li>
@@ -1341,7 +1352,7 @@
 <ul class="vocab-list">
 <li>“year (Elvish = 144 solar years)” <i>n.</i> <b>yén</b></li>
 <li>“year (seasonal)” <i>n.</i> <b>loa</b></li>
-<li>“year (solar = sun-round)” <i>n.</i> <b>coranar</b></li>
+<li>“year (solar = sun-round)” <i>n.</i> <b>coranar</b> (<b>coranár-</b>)</li>
 <li>“yellow” <i>adj.</i> <b>malina</b></li>
 <li>“yellow powder (e.g. pollen, rust)” <i>n.</i> <b>malo</b> (<b>malu-</b>)</li>
 <li>“yes, I agree” <i>interj.</i> <b>sá</b> [þ]</li>
