--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-15.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-15.html
@@ -701,7 +701,7 @@
 <p>Translate the following to Quenya:</p>
 
 <ol class="exercise-list" start="7">
-<li>Do your ears listen to the king’s words?</li>
+<li>Do your ears hear the king’s words?</li>
 <li>The pair of birds sang in the tree.</li>
 <li>His tongue tasted a bitter vegetable.</li>
 <li>Birds fly above both land and sea.</li>
