--- a/src/main/webapp/elvish-composition-archive/index.html
+++ b/src/main/webapp/elvish-composition-archive/index.html
@@ -8,7 +8,7 @@
 
 <h1>Elvish Composition Archive</h1>
 
-<p>Version 0.1.5 - July 19, 2023</p>
+<p>Version 0.1.6 - Nov 11, 2023</p>
 
 <p>This web page and its content are a mirror of the <i>Elvish Composition Archive</i>: a collection of works in Tolkien’s Elvish languages, Quenya and Sindarin. Content is organized alphabetically by <a href="#authors">author</a>. If you want to get (or even host) your own copy of the archive, see the section on <a href="#licensing">mirrors, downloads and licensing</a>. If you want to contribute to the archive, see the section on <a href="#submissions">submissions</a>.</p>
 
@@ -18,6 +18,7 @@
 
 <ul>
 <li><a href="#chaered">Chaered</a></li>
+<li><a href="#delle">Delle</a></li>
 <li><a href="#ellanto">Ellanto</a></li>
 <li><a href="#luinyelle">Luinyelle</a></li>
 <li><a href="#vyacheslav-stepanov">Vyacheslav Stepanov</a></li>
@@ -27,6 +28,12 @@
 
 <ul>
 <li><a href="chaered/tengwa-abc.html">Tengwar ABC</a> (Quenya, 2023)</li>
+</ul>
+
+<h3><a id="delle"></a>Delle</h3>
+
+<ul>
+<li><a href="delle/nyare-pa-i-corco.html">Nyare Pá i Corco</a> (Quenya, 2023)</li>
 </ul>
 
 <h3><a id="ellanto"></a>Ellanto</h3>
@@ -41,6 +48,7 @@
 <li><a href="luinyelle/vanima-na-valimar.html">Vanima ná Valimar</a> (Quenya, 2022)</li>
 <li><a href="luinyelle/a-lirulin.html">A Lirulin</a> (Quenya, 2022)</li>
 <li><a href="luinyelle/i-korko.html">i Korko</a> (Quenya, 2023)</li>
+<li><a href="luinyelle/feanaron-pataka-vinya.html">Feanáron Pataka Vinya</a> (Quenya, 2023)</li>
 </ul>
 
 <h3><a id="vyacheslav-stepanov"></a>Vyacheslav Stepanov</h3>
