--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-06.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-06.html
@@ -302,7 +302,7 @@
 <li>The base word is three or more syllables long.</li>
 <li>The word ends in a vowel and the suffix begins with a single consonant: <i>telumë</i> + <i>-va</i> → <i>telum<u>é</u>va</i>.</li>
 <li>Alternately, the word ends in a single consonant and the suffix begins with a vowel (possibly followed by one consonant): <i>Atanatar</i> + <i>-i</i> → <i>Atanat<u>á</u>ri</i>.</li>
-<li>The second-to-last syllable of the base word cannot be stressed:
+<li>Lengthening does not occur if the second-to-last syllable of the base word is stressed:
 <ul>
 <li><i>telumë</i> + <i>-li</i> → <i>telum<u>é</u>li</i> but <i>falassë</i> + <i>-li</i> → <i>falasseli</i></li>
 </ul>
@@ -409,7 +409,7 @@
 <li><span class="advanced-topic">Speculative:</span> <i>Moriquen-</i> (<i>Moriquend-</i>) → <i>Moriquendeli</i> “some Dark Elves”.</li>
 </ul>
 
-<p><a id="c6-2-1-3"></a><b>6.2.1.3 Definite Partitive Plurals:</b> In English, “some” cannot be definite; you cannot say “the some elves”. You can, however, say “the many elves”, and this seems to be the connotation when the partitive plural is made definite: <i>i eldali</i> = “the many elves”. It seems this definite-partitive plural formation is rarely used, however, except in poetry where it may be useful for adding an additional syllable.</p>
+<p><a id="c6-2-1-3"></a><b>6.2.1.3 Definite Partitive Plurals:</b> In English, “some” cannot be definite; you cannot say “the some elves”. You can, however, say “the many elves”, and this seems to be best English translation when the partitive plural is made definite: <i>i eldali</i> = “the many elves”. It seems this definite-partitive plural formation is rarely used, however, except in poetry where it may be useful for adding an additional syllable.</p>
 
 <p><a id="c6-2-1-4"></a><b>6.2.1.4 Partitive Plurals and Noun Cases:</b> The partitive plural combines with the Quenya noun cases in various ways; we’ve already seen one instance in <a href="eldamo-intro-quenya-05.html#c5-3-1">Chapter 5, §5.3.1</a> where we described the dative partitive plural suffix <i>-lin</i> = <i>-li + n</i> “to/for some ...”. Rather than covering all the possibilities here, each combination will be discussed along with each individual noun case.</p>
 
@@ -1228,7 +1228,7 @@
 <ul><li><i>pa.t.</i> *<b>termarnë</b> “endured”</li></ul></li>
 <li><b>vanda</b> <i>n.</i> “oath”</li>
 <li><b>voronda</b> <i>adj.</i> “faithful, loyal”</li>
-<li><b>voronwë</b> <i>n.</i> “faith”</li>
+<li><b>voronwë</b> <i>n.</i> “faith, loyalty”</li>
 </ul>
 
 <ul>
@@ -1508,7 +1508,7 @@ and of the One who is above all thrones for ever.
 <ul><li><i>pa.t.</i> *<b>termarnë</b> “endured”</li></ul></li>
 <li><b>vanda</b> <i>n.</i> “oath”</li>
 <li><b>voronda</b> <i>adj.</i> “faithful, loyal”</li>
-<li><b>voronwë</b> <i>n.</i> “faith”</li>
+<li><b>voronwë</b> <i>n.</i> “faith, loyalty”</li>
 </ul>
 
 <h2><a id="c6-7-2"></a>6.7.2 Grammar Summary</h2>
@@ -1542,7 +1542,7 @@ and of the One who is above all thrones for ever.
 <li>The base word is three or more syllables long.</li>
 <li>The word ends in a vowel and the suffix begins with a single consonant: <i>telumë</i> + <i>-va</i> → <i>telum<u>é</u>va</i>.</li>
 <li>Alternately, the word ends in a single consonant and the suffix begins with a vowel (possible followed by one consonant): <i>Atanatar</i> + <i>-i</i> → <i>Atanat<u>á</u>ri</i>.</li>
-<li>The second-to-last syllable of the base word cannot be stressed:
+<li>Lengthening does not occur if the second-to-last syllable of the base word is stressed:
 <ul>
 <li><i>telumë</i> + <i>-li</i> → <i>telum<u>é</u>li</i> but <i>falassë</i> + <i>-li</i> → <i>falasseli</i></li>
 </ul>
