--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-09.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-09.html
@@ -188,7 +188,7 @@
 <li><i>melda</i> “dear, beloved” = √<i>MEL</i> + <i>-nā</i> (Ety/MEL; PE17/41).</li>
 </ul>
 
-<p>As such not every adjective derived from a verb uses <i>-ina</i>, and not every adjective ending in <i>-ina</i> is derived from a verb. There are even some ambiguous cases like <i>calina</i> “bright, light [coloured]” derived from the root √<i>KAL</i> “shine” (Ety/KAL; PE17/153). This can be taken as the passive participle of the verb <i>cal-</i> “shine”, hence meaning “*shown (upon)” = “illuminated, sunny”, but it also has other meanings as an ancient general adjective having to do with brightness (PE22/136). Intransitive verbs (those without direct object) are most prone to this ambiguity.</p>
+<p>As such not every adjective derived from a verb uses <i>-ina</i>, and not every adjective ending in <i>-ina</i> is derived from a verb. There are even some ambiguous cases like <i>calina</i> “bright, light [coloured]” derived from the root √<i>KAL</i> “shine” (Ety/KAL; PE17/153). This can be taken as the passive participle of the verb <i>cal-</i> “shine”, hence meaning “*shone (upon)” = “illuminated, sunny”, but it also has other meanings as an ancient general adjective having to do with brightness (PE22/136). Intransitive verbs (those without direct object) are most prone to this ambiguity.</p>
 
 <div class="advanced-topic">
 <p><a id="c9-1-2-4"></a><b>9.1.2.4 How do we know this?</b> The picture for passive participle is less clear than that of active participles. Although passive participles and the suffix <i>-ina</i> are mentioned regularly in Tolkien’s later writings (PE17/68; PE22/152), we have relatively few examples of them, especially for non-basic verbs. The most comprehensive description of passive participles appears in the <i>Quenya Verbal System</i> (QVS) written in 1948 (PE22/107). This document included examples of passive participles for most verb classes (PE22/114-118). Most (but not all) attested passive participles in Tolkien’s later writing are compatible with this system.</p>
@@ -437,7 +437,7 @@
 
 <blockquote>This has the result that the normal Eldarin verb expresses both the passive and the active: e.g. √MAT “eat”: aorist stem <i>mati</i> [modern Quenya <i>matë</i>]; 1 pers. <i>matini</i> (agent unspecified) [modern Quenya <i>matë ni</i>] “one eats me; I am eaten” (PE22/93).</blockquote>
 
-<p>English uses a past participle and verb inversion for passive voice if the subject is unknown or unexpressed, like “Túrin was slain”. For this construction, Quenya would simply omit the subject: <i>nahtanë Túrin</i> “[someone] slew Túrin”. Where such constructions are ambiguous, Quenya can introduce a neuter pronoun. In <i>Late Notes on Verb Structure</i> (LVS) written in 1969 Tolkien first said this neuter pronoun was <i>e</i>:</p>
+<p>English uses a past participle and verb inversion for passive voice if the subject is unknown or unexpressed, like “Túrin was slain”. For this construction, Quenya would simply omit the subject: <i>nacantë Túrin</i> “[someone] slew Túrin”. Where such constructions are ambiguous, Quenya can introduce a neuter pronoun. In <i>Late Notes on Verb Structure</i> (LVS) written in 1969 Tolkien first said this neuter pronoun was <i>e</i>:</p>
 
 <blockquote><i>e</i>, neuter, is an indefinite pronominal element corresponding to E[nglish] “one” (neut[er] “it, a thing”); a later development, to make the purely impersonal verb form more precise and dist[inguish] it from the bare infinitive, as is shown by its preceding the verb (PE22/154 note #57).</blockquote>
 
@@ -543,7 +543,7 @@
 <ol class="exercise-list" start="5">
 <li>It rains.</li>
 <li>One fashions a sword with craft.</li>
-<li>The picture was fastened on the wall with a nail.</li>
+<li>The picture was fastened on the tree with a nail.</li>
 <li>The smith feels an urge to make a sword.</li>
 </ol>
 
@@ -704,7 +704,8 @@
 <li><b><a href="#c9-4-1-1">9.4.1.1 <i>an</i>-intensives</a></b></li>
 <li><b><a href="#c9-4-1-2">9.4.1.2 <i>ar</i>-superlatives</a></b></li>
 <li><b><a href="#c9-4-1-3">9.4.1.3 <i>am</i>-intensives</a></b></li>
-<li class="advanced-topic"><b><a href="#c9-4-1-4">9.4.1.4 How do we know this?</a></b></li>
+<li><b><a href="#c9-4-1-4">9.4.1.4 Better and Best</a></b></li>
+<li class="advanced-topic"><b><a href="#c9-4-1-5">9.4.1.5 How do we know this?</a></b></li>
 </ul>
 
 <p>In Tolkien’s later writings, he used three different prefixes for intensives: <i>an(a)-</i>, <i>ar(i)-</i> and <i>am(a)-</i>.</p>
@@ -750,8 +751,10 @@
 
 <p>In Tolkien’s discussion of the <i>am</i>-intensives, there was no mention of the <i>ar</i>-superlatives, so the two ideas may not be compatible.</p>
 
+<p><a id="c9-4-1-4"></a><b>9.4.1.4 Better and Best:</b> As part of the 1957-59 paradigm described above, Tolkien had a special intensive form of the adjective <i>mára</i> “good”, whose intensive was <i>arya</i> “excelling”, of the same origin as the superlative prefix <i>ar(i)-</i> (PE17/56-7). This form also functions as the comparative for <i>mára</i> in the same way as other intensive forms, so it also means “better” (PE17/147). Finally it can be used with the definite article <i>i</i> and a genitive to function as a superlative “best”, such as <i>Aragorn i arya atanion</i> “Aragorn [is] the best of Men” (PE17/57). See section <a href="#c9-4-2-3">9.4.2.3 Superlative Expressions</a> below for similar examples.</li></p>
+
 <div class="advanced-topic">
-<p><a id="c9-4-1-4"></a><b>9.4.1.4 How do we know this?</b> Tolkien’s earliest explanation of the <i>an</i>-intensives dates back to <i>The Etymologies</i> of the 1930s, where the intensives were based on a prefixed syllabic nasal <i>ṇ-</i> blended with the intensifying prefix <i>a-</i> (VT45/5, 36). The 1930s intensives used a different set of consonant assimilations: <i>all-</i>, <i>arr-</i>, <i>ass-</i> rather than <i>anal-</i>, <i>anar-</i>, <i>ans-</i>. The 1930s intensives sometimes also used vowels other than <i>a</i>, such as <i>um-</i> before <i>p, qu</i> (<i>ump-, unqu-</i>) or <i>in-</i> before <i>c</i> (<i>inc-</i>). I’ve seen some systems of (Neo) Quenya intensives based on these 1930s forms, in particular early versions of Helge Fauskanger’s Quenya course and the Quenya course of Thorsten Renk.</p>
+<p><a id="c9-4-1-5"></a><b>9.4.1.5 How do we know this?</b> Tolkien’s earliest explanation of the <i>an</i>-intensives dates back to <i>The Etymologies</i> of the 1930s, where the intensives were based on a prefixed syllabic nasal <i>ṇ-</i> blended with the intensifying prefix <i>a-</i> (VT45/5, 36). The 1930s intensives used a different set of consonant assimilations: <i>all-</i>, <i>arr-</i>, <i>ass-</i> rather than <i>anal-</i>, <i>anar-</i>, <i>ans-</i>. The 1930s intensives sometimes also used vowels other than <i>a</i>, such as <i>um-</i> before <i>p, qu</i> (<i>ump-, unqu-</i>) or <i>in-</i> before <i>c</i> (<i>inc-</i>). I’ve seen some systems of (Neo) Quenya intensives based on these 1930s forms, in particular early versions of Helge Fauskanger’s Quenya course and the Quenya course of Thorsten Renk.</p>
 
 <p>Tolkien gave a different explanation of the <i>an</i>-intensives in Quenya Notes written in 1957, connecting it to the root √<i>AN</i> “to(wards)” with an extended sense “plu[s]” (PE17/146). In notes written around this time he described a system of <i>an</i>-intensives and <i>ar</i>-superlatives (PE17/56-57). Tolkien didn’t give many details on how the prefix <i>an-</i> combines with other consonants, saying only “<i>an</i> occur[s] before agreeable consonants ... <i>ana</i> before groups”. He also said that the form <i>an</i> was only used before a light syllable, as in <i>ancalima</i> “very bright”, where the syllable <i>cal</i> is light because it has a short vowel followed by a single consonant. Before a heavy syllable the longer suffix was <i>ana-</i>, as in <i>anacarnë</i> “very red” where <i>carn-</i> is heavy because it is followed by a consonant cluster (Tolkien’s actual example was <i>anamelda</i> “very beloved”). The prefix <i>ar(i)-</i> behaved similarly: <i>arcalima</i> “most bright” vs. <i>aricarnë</i> “most red” (vs. Tolkien’s example <i>arimelda</i>).</p>
 
@@ -763,7 +766,7 @@
 <ul>
 <li><b><a href="#c9-4-2-1">9.4.2.1 <i>lá</i>-comparisons</a></b></li>
 <li><b><a href="#c9-4-2-2">9.4.2.2 <i>epë</i>-comparisons</a></b></li>
-<li><b><a href="#c9-4-2-3">9.4.2.3 Superlative expressions</a></b></li>
+<li><b><a href="#c9-4-2-3">9.4.2.3 Superlative Expressions</a></b></li>
 <li><b><a href="#c9-4-2-4">9.4.2.4 Comparative adjectives and adverbs</a></b></li>
 <li class="advanced-topic"><b><a href="#c9-4-2-5">9.4.2.5 How do we know this?</a></b></li>
 </ul>
@@ -786,7 +789,7 @@
 
 <p>Here the first noun is described with an intensive form of the adjective before (= more intense than) the value of the second noun: <i>A (ná) an-[adjective] epë B</i>. As usual, the “to be” verb <i>ná</i> is optional.</p>
 
-<p><a id="c9-4-2-3"></a><b>9.4.2.3 Superlative expressions:</b> There is an example of a superlative (most) in <i>The Lord of the Rings</i> itself: <i>aiya Eärendil elenion ancalima</i> “hail Eärendil, brightest of stars” (LotR/720). Here the superlative formula was an intensive adjective applied to the genitive plural of a group of nouns: <i>[noun]-(genitive-pl.) an-[adjective]</i>. Since this phrase was canonical within <i>The Lord of the Rings</i>, Tolkien used this superlative formula alongside both <i>lá</i>-comparisons and <i>epë</i>-comparisons.</p>
+<p><a id="c9-4-2-3"></a><b>9.4.2.3 Superlative Expressions:</b> There is an example of a superlative (most) in <i>The Lord of the Rings</i> itself: <i>aiya Eärendil elenion ancalima</i> “hail Eärendil, brightest of stars” (LotR/720). Here the superlative formula was an intensive adjective applied to the genitive plural of a group of nouns: <i>[noun]-(genitive-pl.) an-[adjective]</i>. Since this phrase was canonical within <i>The Lord of the Rings</i>, Tolkien used this superlative formula alongside both <i>lá</i>-comparisons and <i>epë</i>-comparisons.</p>
 
 <p>However, in the system of <i>epë</i>-comparisons <i>elenion ancalima</i> was somewhat weaker, meaningly merely “very bright among stars” rather than “brighest of stars”. The genuinely superlative expression used the prefix <i>ar(i)-</i> instead: <i>elenion arcalima</i> “most bright of stars”. More generically, you could say <i>Eärendil (ná) arcalima ilyaron</i> “Eärendil is most bright of all”, where <i>ilyaron</i> is the genitive plural of a nominalized form of the adjective <i>ilya</i> “all”.</p>
 
@@ -838,11 +841,12 @@
 
 <ul class="vocab-list">
 <li><b>amanya</b> <i>adj.</i> “blessed”</li>
-<li><b>cólima</b> <i>adj.</i> “light, bearable” ¹</li>
+<li><b>arya</b> <i>adj.</i> “excelling, *better” ¹</li>
+<li><b>cólima</b> <i>adj.</i> “light, bearable” ²</li>
 <li><b>finwa</b> <i>adj.</i> “️dexterous, clever”</li>
 <li><b>helca</b> <i>adj.</i> “icy”</li>
 <li><b>lauca</b> <i>adj.</i> “warm”</li>
-<li><b>lungo</b> (<b>lungu-</b>) <i>adj.</i> “heavy” ²</li>
+<li><b>lungo</b> (<b>lungu-</b>) <i>adj.</i> “heavy” ³</li>
 <li><b>maica</b> <i>adj.</i> “sharp”</li>
 <li><b>mussë</b> <i>adj.</i> “soft”</li>
 <li><b>nenda</b> <i>adj.</i> “wet”</li>
@@ -860,8 +864,9 @@
 </ul>
 
 <ul>
-<li>Note ¹: This adjective is formed from the verb <i>col-</i> “to bear, carry” with the suffix <i>-ima</i> “-able”, and hence literally means “bearable = able to be born”. The meaning “light” extends from this. See the section <a href="#c9-1-4-1">9.1.4.1 The Suffix <i>-ima</i></a> for further discussion.</li>
-<li>Note ²: This is an example of a (rare) adjective ending in <i>-o</i>, which has plural forms with <i>-ui/-wi</i>: <i>lungwi</i> “heavy (pl.)”. See <a href="eldamo-intro-quenya-04.html#c4-2-2">Chapter 4, Section §4.2.2</a> for further discussion.</li>
+<li>Note ¹: The adjective <i>arya</i> is the intense/comparative form of <i>mára</i> “good”. It can also be used as a superlative “best” in combination with the definite article and the genitive: <i>Aragorn i arya atanion</i> “Aragorn is the best of men”.</li>
+<li>Note ²: This adjective is formed from the verb <i>col-</i> “to bear, carry” with the suffix <i>-ima</i> “-able”, and hence literally means “bearable = able to be born”. The meaning “light” extends from this. See the section <a href="#c9-1-4-1">9.1.4.1 The Suffix <i>-ima</i></a> for further discussion.</li>
+<li>Note ³: This is an example of a (rare) adjective ending in <i>-o</i>, which has plural forms with <i>-ui/-wi</i>: <i>lungwi</i> “heavy (pl.)”. See <a href="eldamo-intro-quenya-04.html#c4-2-2">Chapter 4, Section §4.2.2</a> for further discussion.</li>
 </ul>
 
 <h2><a id="c9-4-5"></a>9.4.5 Section Summary</h2>
@@ -1169,11 +1174,12 @@ ar <u>amanya</u> i yávë mónalyo Yésus</i>
 
 <ul class="vocab-list">
 <li><b>amanya</b> <i>adj.</i> “blessed”</li>
-<li><b>cólima</b> <i>adj.</i> “light, bearable” ¹</li>
+<li><b>arya</b> <i>adj.</i> “excelling, *better” ¹</li>
+<li><b>cólima</b> <i>adj.</i> “light, bearable” ²</li>
 <li><b>finwa</b> <i>adj.</i> “️dexterous, clever”</li>
 <li><b>helca</b> <i>adj.</i> “icy”</li>
 <li><b>lauca</b> <i>adj.</i> “warm”</li>
-<li><b>lungo</b> (<b>lungu-</b>) <i>adj.</i> “heavy” ²</li>
+<li><b>lungo</b> (<b>lungu-</b>) <i>adj.</i> “heavy” ³</li>
 <li><b>maica</b> <i>adj.</i> “sharp”</li>
 <li><b>mussë</b> <i>adj.</i> “soft”</li>
 <li><b>nenda</b> <i>adj.</i> “wet”</li>
@@ -1191,8 +1197,9 @@ ar <u>amanya</u> i yávë mónalyo Yésus</i>
 </ul>
 
 <ul>
-<li>Note ¹: This adjective is formed from the verb <i>col-</i> “to bear, carry” with the suffix <i>-ima</i> “-able”, and hence literally means “bearable = able to be born”. The meaning “light” extends from this. See the section <a href="#c9-1-4-1">9.1.4.1 The Suffix <i>-ima</i></a> for further discussion.</li>
-<li>Note ²: This is an example of a (rare) adjective ending in <i>-o</i>, which has plural forms with <i>-ui/-wi</i>: <i>lungwi</i> “heavy (pl.)”. See <a href="eldamo-intro-quenya-04.html#c4-2-2">Chapter 4, Section §4.2.2</a> for further discussion.</li>
+<li>Note ¹: The adjective <i>arya</i> is the intense/comparative form of <i>mára</i> “good”. It can also be used as a superlative “best” in combination with the definite article and the genitive: <i>Aragorn i arya atanion</i> “Aragorn is the best of men”.</li>
+<li>Note ²: This adjective is formed from the verb <i>col-</i> “to bear, carry” with the suffix <i>-ima</i> “-able”, and hence literally means “bearable = able to be born”. The meaning “light” extends from this. See the section <a href="#c9-1-4-1">9.1.4.1 The Suffix <i>-ima</i></a> for further discussion.</li>
+<li>Note ³: This is an example of a (rare) adjective ending in <i>-o</i>, which has plural forms with <i>-ui/-wi</i>: <i>lungwi</i> “heavy (pl.)”. See <a href="eldamo-intro-quenya-04.html#c4-2-2">Chapter 4, Section §4.2.2</a> for further discussion.</li>
 </ul>
 
 <p><b><u>The Week:</u></b></p>
@@ -1232,7 +1239,7 @@ ar <u>amanya</u> i yávë mónalyo Yésus</i>
 <ul class="vocab-list">
 <li><b>loa</b> <i>n.</i> “(seasonal) year”</li>
 <li><b>nóloa</b> <i>n.</i> “yesteryear”</li>
-<li><b>coranar</b> <i>n.</i> “(solar) year, sun-round”</li>
+<li><b>coranar</b> (<b>coranár-</b>) <i>n.</i> “(solar) year, sun-round”</li>
 <li><b>yén</b> <i>n.</i> “Elvish long year (144 solar years)”</li>
 <li><b>hrívë</b> <i>n.</i> “winter”</li>
 <li><b>coirë</b> <i>n.</i> “early spring, stirring”</li>
@@ -1374,9 +1381,9 @@ ar <u>amanya</u> i yávë mónalyo Yésus</i>
 
 <ol class="exercise-list tengwar-block" start="7">
 <li><span class="transcribe" data-lang="q" data-value="I antaula perian penë telpë sí">I antaula perian penë telpë sí</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Cavaitë mahar harë i coassë">Cavaitë mahar harë i coassë</span></li>
+<li><span class="transcribe" data-lang="q" data-value="I cavaitë mahar harë i cöassë">I cavaitë mahar harë i cöassë</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Ilyë mahtailë ohtari qualuvar">Ilyë mahtailë ohtari qualuvar</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Cavinë annar rehtaner i nettion alassë">Cavinë annar rehtaner i nettion alassë</span></li>
+<li><span class="transcribe" data-lang="q" data-value="I cavinë annar rehtaner i nettion alassë">I cavinë annar rehtaner i nettion alassë</span></li>
 <li><span class="transcribe" data-lang="q" data-value="I eldar antaner i lepinë armar i heston">I eldar antaner i lepinë armar i heston</span></li>
 <li><span class="transcribe" data-lang="q" data-value="I lepilë atani hander i mindonessë">I lepilë atani hander i mindonessë</span></li>
 </ol>
@@ -1393,7 +1400,7 @@ ar <u>amanya</u> i yávë mónalyo Yésus</i>
 <ol class="exercise-list" start="5">
 <li><i>Ulë.</i></li>
 <li><i>Mo catë macil curwenen.</i></li>
-<li><i>I emma nánë tacina i rambassë taxenen.</i></li>
+<li><i>I emma nánë tacina i aldassë taxenen.</i></li>
 <li><i>Orë i tamon carita macil.</i> ¹</li>
 </ol>
 
@@ -1406,7 +1413,7 @@ ar <u>amanya</u> i yávë mónalyo Yésus</i>
 <ol class="exercise-list tengwar-block" start="5">
 <li><span class="transcribe" data-lang="q" data-value="Ulë">Ulë</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Mo catë macil curwenen">Mo catë macil curwenen</span></li>
-<li><span class="transcribe" data-lang="q" data-value="I emma nánë tacina i rambanna taxenen">I emma nánë tacina i rambanna taxenen</span></li>
+<li><span class="transcribe" data-lang="q" data-value="I emma nánë tacina i aldassë taxenen">I emma nánë tacina i aldassë taxenen</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Orë i tamon carita macil">Orë i tamon carita macil</span></li>
 </ol>
 
